--- a/portfolio/activebox.html
+++ b/portfolio/activebox.html
@@ -63,11 +63,11 @@
         </div>
 
         <ul class="content sidenav">
-            <li><a href='../index.html'>Home</a></li>
-            <li><a href="../About.html">About</a></li>
-            <li><a href="../Services.html">Services</a></li>
-            <li><a href="../Works.html">Works</a></li>
-            <li><a href='../ContactFrom_v6/Contacts.html' target="_blank">Contact</a></li>
+            <li><a href="../index.html">Home</a></li>
+            <li><a href="../about.html">About</a></li>
+            <li><a href="../services.html">Services</a></li>
+            <li><a href="../works.html">Works</a></li>
+            <li><a href="../contacts.html" target="_blank">Contact</a></li>
             <li class="phone_navbar">
                 <span class="phone_highlight"> +1-647</span>
                 <span>-676-3661 </span>
@@ -81,7 +81,6 @@
         <a href="../index.html"> <img src='../img/logo/iDigitalLogo.svg' alt="iDigital" width=250px></a>
     </div>
 
-
     <!-- Breadcrumbs -->
 
     <div class="breadcrumbs_container">
@@ -93,9 +92,9 @@
                     <a href='../index.html'>Home</a>
                 </li>
                 <li class="second-item">
-                    <a href='../Works.html'>Works</a>
+                    <a href='../works.html'>Works</a>
                 </li>
-                <li class="last-item">Instatech</li>
+                <li class="last-item">ActiveBox</li>
             </ol>
         </div>
     </div>
@@ -104,13 +103,17 @@
     <!-- Block_1 -->
 
     <div class="block_1">
-        <img class="imgResponsive animate__animated animate__fadeIn" src='../img/portfolio_9.jpg' alt="Instatech">
+        <img class="imgResponsive animate__animated animate__fadeIn" src='../img/portfolio_3.jpg' alt="ActiveBox">
         <div class="block_1_text animate__animated animate__fadeInUp">
-            <h5 align="center">Instatech</h5> <br>
-            <p align="justify">Consulting services and solutions in AI • BLOCKCHAIN • CRYPTO • IOT • VR • AR •
-                MOBILE</p>
-            <p>Visit Website at : <a href='https://instatec.com/' class="portfolioLink">Instatech</a></p> <br>
-            <p>Technologies Used: HTML5, CSS3, JavaScript, PHP, MySQL, Less, Sass</p>
+            <h5 align="center">ActiveBox</h5> <br>
+            <p align="justify">Universal template for multipurpose use. Just fill it up with your content and it's
+                ready to go.
+                Template is adapted for all types of devices: mobile, tablet, desktop. It's responsive and looks
+                very beautiful
+                on every device.</p>
+            <p>Visit Website at : <a href='https://savazh.github.io/activebox/#activebox.html' class="portfolioLink">ActiveBox</a>
+            </p> <br>
+            <p>Technologies Used: HTML5, CSS3, JavaScript</p>
         </div>
     </div>
 
