--- a/portfolio/finmap.html
+++ b/portfolio/finmap.html
@@ -63,11 +63,11 @@
         </div>
 
         <ul class="content sidenav">
-            <li><a href='../index.html'>Home</a></li>
-            <li><a href="../About.html">About</a></li>
-            <li><a href="../Services.html">Services</a></li>
-            <li><a href="../Works.html">Works</a></li>
-            <li><a href='../ContactFrom_v6/Contacts.html' target="_blank">Contact</a></li>
+            <li><a href="../index.html">Home</a></li>
+            <li><a href="../about.html">About</a></li>
+            <li><a href="../services.html">Services</a></li>
+            <li><a href="../works.html">Works</a></li>
+            <li><a href="../contacts.html" target="_blank">Contact</a></li>
             <li class="phone_navbar">
                 <span class="phone_highlight"> +1-647</span>
                 <span>-676-3661 </span>
@@ -81,6 +81,7 @@
         <a href="../index.html"> <img src='../img/logo/iDigitalLogo.svg' alt="iDigital" width=250px></a>
     </div>
 
+
     <!-- Breadcrumbs -->
 
     <div class="breadcrumbs_container">
@@ -92,9 +93,9 @@
                     <a href='../index.html'>Home</a>
                 </li>
                 <li class="second-item">
-                    <a href='../Works.html'>Works</a>
+                    <a href='../works.html'>Works</a>
                 </li>
-                <li class="last-item">ActiveBox</li>
+                <li class="last-item">FinMap</li>
             </ol>
         </div>
     </div>
@@ -103,17 +104,21 @@
     <!-- Block_1 -->
 
     <div class="block_1">
-        <img class="imgResponsive animate__animated animate__fadeIn" src='../img/portfolio_3.jpg' alt="ActiveBox">
+        <img class="imgResponsive animate__animated animate__fadeIn" src='../img/portfolio_6.jpg'>
         <div class="block_1_text animate__animated animate__fadeInUp">
-            <h5 align="center">ActiveBox</h5> <br>
-            <p align="justify">Universal template for multipurpose use. Just fill it up with your content and it's
-                ready to go.
-                Template is adapted for all types of devices: mobile, tablet, desktop. It's responsive and looks
-                very beautiful
-                on every device.</p>
-            <p>Visit Website at : <a href='https://savazh.github.io/activebox/#' class="portfolioLink">ActiveBox</a>
-            </p> <br>
-            <p>Technologies Used: HTML5, CSS3, JavaScript</p>
+            <h5 align="center">FinMap</h5> <br>
+            <p align="justify">Online service for comprehensible and convenient financial management. Service
+                provides all you need to manage a
+                small and a medium-sized business. All the owner needs to keep track of everything and to focus on
+                business development.</p>
+            <p align="justify">An online service based on the principle of the household
+                budget accounting: simple buttons, user-friendly interface and solution to owner's concerns.</p>
+            <p align="justify">All data is in one place: income, expenses, transactions, projects.
+                You are always aware of the current situation – no nasty surprises.</p>
+            <p align="justify">Proprietary algorithm for automated P&L and Cashflow reports, in-depth analytics and
+                debt control.</p>
+            <p>Visit Website at : <a href='https://finmap.online/en/finmap.html' class="portfolioLink">FinMap</a></p> <br>
+            <p>Technologies Used: HTML5, CSS3, JavaScript, PHP, MySQL, Less, Sass</p>
         </div>
     </div>
 
