--- a/portfolio/instatech.html
+++ b/portfolio/instatech.html
@@ -63,11 +63,11 @@
         </div>
 
         <ul class="content sidenav">
-            <li><a href='../index.html'>Home</a></li>
-            <li><a href="../About.html">About</a></li>
-            <li><a href="../Services.html">Services</a></li>
-            <li><a href="../Works.html">Works</a></li>
-            <li><a href='../ContactFrom_v6/Contacts.html' target="_blank">Contact</a></li>
+            <li><a href="../index.html">Home</a></li>
+            <li><a href="../about.html">About</a></li>
+            <li><a href="../services.html">Services</a></li>
+            <li><a href="../works.html">Works</a></li>
+            <li><a href="../contacts.html" target="_blank">Contact</a></li>
             <li class="phone_navbar">
                 <span class="phone_highlight"> +1-647</span>
                 <span>-676-3661 </span>
@@ -93,9 +93,9 @@
                     <a href='../index.html'>Home</a>
                 </li>
                 <li class="second-item">
-                    <a href='../Works.html'>Works</a>
+                    <a href='../works.html'>Works</a>
                 </li>
-                <li class="last-item">Vivis Organics</li>
+                <li class="last-item">Instatech</li>
             </ol>
         </div>
     </div>
@@ -104,16 +104,13 @@
     <!-- Block_1 -->
 
     <div class="block_1">
-        <img class="imgResponsive animate__animated animate__fadeIn" src='../img/portfolio_4.jpg' alt="Vivis Organics">
+        <img class="imgResponsive animate__animated animate__fadeIn" src='../img/portfolio_9.jpg' alt="Instatech">
         <div class="block_1_text animate__animated animate__fadeInUp">
-            <h5 align="center">Vivi's Organics</h5> <br>
-            <p align="justify">Online store with user-friendly CMS, and popular payment systems. Sells organic
-                cosmetics for woman
-                (cream, moisturizers, etc). Website has responsive interface, looks good on all devices with
-                different size of screen.</p>
-            <p>Visit Website at : <a href='http://vivisorganic.com.tilda.ws/#rec179708850'
-                                     class="portfolioLink">Vivi's Organics</a></p> <br>
-            <p>Technologies Used: CMS Tilda, PHP, HTML5, CSS3, JavaScript, MySQL, Less, Sass</p>
+            <h5 align="center">Instatech</h5> <br>
+            <p align="justify">Consulting services and solutions in AI • BLOCKCHAIN • CRYPTO • IOT • VR • AR •
+                MOBILE</p>
+            <p>Visit Website at : <a href='https://instatec.com/' class="portfolioLink">Instatech</a></p> <br>
+            <p>Technologies Used: HTML5, CSS3, JavaScript, PHP, MySQL, Less, Sass</p>
         </div>
     </div>
 
