--- a/portfolio/lost_shirt.html
+++ b/portfolio/lost_shirt.html
@@ -63,11 +63,11 @@
         </div>
 
         <ul class="content sidenav">
-            <li><a href='../index.html'>Home</a></li>
-            <li><a href="../About.html">About</a></li>
-            <li><a href="../Services.html">Services</a></li>
-            <li><a href="../Works.html">Works</a></li>
-            <li><a href='../ContactFrom_v6/Contacts.html' target="_blank">Contact</a></li>
+            <li><a href="../index.html">Home</a></li>
+            <li><a href="../about.html">About</a></li>
+            <li><a href="../services.html">Services</a></li>
+            <li><a href="../works.html">Works</a></li>
+            <li><a href="../contacts.html" target="_blank">Contact</a></li>
             <li class="phone_navbar">
                 <span class="phone_highlight"> +1-647</span>
                 <span>-676-3661 </span>
@@ -81,7 +81,6 @@
         <a href="../index.html"> <img src='../img/logo/iDigitalLogo.svg' alt="iDigital" width=250px></a>
     </div>
 
-
     <!-- Breadcrumbs -->
 
     <div class="breadcrumbs_container">
@@ -93,9 +92,9 @@
                     <a href='../index.html'>Home</a>
                 </li>
                 <li class="second-item">
-                    <a href='../Works.html'>Works</a>
+                    <a href='../works.html'>Works</a>
                 </li>
-                <li class="last-item">TeleBot</li>
+                <li class="last-item">Lost Shirt</li>
             </ol>
         </div>
     </div>
@@ -104,14 +103,16 @@
     <!-- Block_1 -->
 
     <div class="block_1">
-        <img class="imgResponsive animate__animated animate__fadeIn" src='../img/portfolio_5.jpg' alt="TeleBot">
+        <img class="imgResponsive animate__animated animate__fadeIn" src='../img/portfolio_2.jpg' alt="Lost Shirt">
         <div class="block_1_text animate__animated animate__fadeInUp">
-            <h5 align="center">COVID-19 Telegram Bot</h5> <br>
-            <p align="justify">Bot, shows COVID-19 statistics all over the world. Contains different filters by
-                countries, cities, etc.</p>
-            <p>Visit Website at : <a href='https://github.com/Savazh/tele-bot-test'
-                                     class="portfolioLink">TeleBot</a></p> <br>
-            <p>Technologies Used: PHP</p>
+            <h5 align="center">Lost Shirt</h5> <br>
+            <p align="justify">Online Store with integrated most popular payment systems and intuitive user-friendly
+                CRM system</p>
+            <p align="justify">Store sells t-shirts different sizes for all genders. Pickup and delivery options are
+                available.</p>
+            <p>Visit Website at: <a href='https://savazh.github.io/lost-shirt/' class="portfolioLink">Lost Shirt</a>
+            </p> <br>
+            <p>Technologies Used: HTML5, CSS3, JavaScript, PHP, MySQL, Less, Sass</p>
         </div>
     </div>
 
