--- a/portfolio/telebot.html
+++ b/portfolio/telebot.html
@@ -63,11 +63,11 @@
         </div>
 
         <ul class="content sidenav">
-            <li><a href='../index.html'>Home</a></li>
-            <li><a href="../About.html">About</a></li>
-            <li><a href="../Services.html">Services</a></li>
-            <li><a href="../Works.html">Works</a></li>
-            <li><a href='../ContactFrom_v6/Contacts.html' target="_blank">Contact</a></li>
+            <li><a href="../index.html">Home</a></li>
+            <li><a href="../about.html">About</a></li>
+            <li><a href="../services.html">Services</a></li>
+            <li><a href="../works.html">Works</a></li>
+            <li><a href="../contacts.html" target="_blank">Contact</a></li>
             <li class="phone_navbar">
                 <span class="phone_highlight"> +1-647</span>
                 <span>-676-3661 </span>
@@ -93,9 +93,9 @@
                     <a href='../index.html'>Home</a>
                 </li>
                 <li class="second-item">
-                    <a href='../Works.html'>Works</a>
+                    <a href='../works.html'>Works</a>
                 </li>
-                <li class="last-item">Bookstore</li>
+                <li class="last-item">TeleBot</li>
             </ol>
         </div>
     </div>
@@ -104,20 +104,14 @@
     <!-- Block_1 -->
 
     <div class="block_1">
-        <img class="imgResponsive animate__animated animate__fadeIn" src='../img/portfolio_7.jpg' alt="Bookstore">
+        <img class="imgResponsive animate__animated animate__fadeIn" src='../img/portfolio_5.jpg' alt="TeleBot">
         <div class="block_1_text animate__animated animate__fadeInUp">
-            <h5 align="center">Adventures of Noah</h5> <br>
-            <p align="justify">Online Book Store with integrated most popular payment systems and intuitive CRM
-                system.</p>
-            <p align="justify">“Adventures of Noah” is a Children’s Picture Book, that can be enjoyed by all. An
-                adorable
-                true story about a puppy named Noah, and life as he knows it, then one incredible thing happens to
-                him.</p>
-            <p align="justify">Books are available on the website in both paper and e-book formats.</p>
-            <!-- <br></br> -->
-            <p>Visit Website at : <a href='https://hexagon-pentagon-nj3f.squarespace.com/'
-                                     class="portfolioLink">Bookstore</a></p> <br>
-            <p>Technologies Used: HTML5, CSS3, JavaScript, PHP, MySQL</p>
+            <h5 align="center">COVID-19 Telegram Bot</h5> <br>
+            <p align="justify">Bot, shows COVID-19 statistics all over the world. Contains different filters by
+                countries, cities, etc.</p>
+            <p>Visit Website at : <a href='https://github.com/Savazh/tele-bot-test'
+                                     class="portfolioLink">TeleBot</a></p> <br>
+            <p>Technologies Used: PHP</p>
         </div>
     </div>
 
