--- a/portfolio/vivis_organics.html
+++ b/portfolio/vivis_organics.html
@@ -30,13 +30,11 @@
     <!--===============================================================================================-->
     <link rel="icon" type="image/png" href="../img/logo/favicon.png">
     <!--===============================================================================================-->
-    <link rel="stylesheet" href="../css/services_subpage_style.css">
+    <link rel="stylesheet" href="../css/portfolio_style.css">
     <!--===============================================================================================-->
-    <link rel="stylesheet" href="../css/fadeBlock.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <!--===============================================================================================-->
-    <link rel="stylesheet" media="all" href="../css/animate.css">
-    <!--===============================================================================================-->
-    <title>Digital Marketing</title>
+    <title>Portfolio</title>
 </head>
 
 <body>
@@ -65,11 +63,11 @@
         </div>
 
         <ul class="content sidenav">
-            <li><a href='../index.html'>Home</a></li>
-            <li><a href="../About.html">About</a></li>
-            <li><a href="../Services.html">Services</a></li>
-            <li><a href="../Works.html">Works</a></li>
-            <li><a href='../ContactFrom_v6/Contacts.html' target="_blank">Contact</a></li>
+            <li><a href="../index.html">Home</a></li>
+            <li><a href="../about.html">About</a></li>
+            <li><a href="../services.html">Services</a></li>
+            <li><a href="../works.html">Works</a></li>
+            <li><a href="../contacts.html" target="_blank">Contact</a></li>
             <li class="phone_navbar">
                 <span class="phone_highlight"> +1-647</span>
                 <span>-676-3661 </span>
@@ -89,87 +87,33 @@
     <div class="breadcrumbs_container">
         <div class="breadcrumbs_row">
             <h4 class="breadcrumbs_title">
-                Digital Marketing </h4>
+                Portfolio </h4>
             <ol class="breadcrumb">
                 <li class="first-item">
                     <a href='../index.html'>Home</a>
                 </li>
                 <li class="second-item">
-                    <a href='../Services.html'>Our Services</a>
+                    <a href='../works.html'>Works</a>
                 </li>
-                <li class="last-item">Digital Marketing</li>
+                <li class="last-item">Vivis Organics</li>
             </ol>
         </div>
     </div>
 
 
     <!-- Block_1 -->
-    <div class="block_1_row">
 
-        <div class="block_1_column_2 fadeInUp animated">
-            <div class="block_1_image">
-                <img src='../img/img_312.jpg' width=100%/>
-            </div>
-        </div>
-
-        <div class="block_1_column_1 fadeInUp animated">
-            <div class="block_1_header">
-                <h4>Outstand - is Always a Win-Win Strategy</h4>
-            </div>
-            <div class="block_1_text">
-                <p>
-                    We offer Digital marketing solutions that generate a return on investment (ROI).
-                    Starting with Search Engine Optimization (SEO), Search Engine Marketing (SEM) and website
-                    monitoring.
-                </p>
-                <p>
-                    We will promote your brand and increase sales with complex approach, using all Internet
-                    marketing tools.
-                    Context advertising, SMM, lead generation, retargeting, YouTube advertising and much more.
-                </p>
-                <p>
-                    Professional digital marketing services allows you to achieve real goals:
-                    systematical growth of business, increase your brand awareness, loyalty from target audience and
-                    most important - increase profits. You will learn how which channel works separately and in
-                    complex with others, and what advantages it brings to your business.
-                </p>
-            </div>
-        </div>
-
-    </div>
-
-    <div class="block_1_row">
-        <div class="block_1_column_3">
-            <div class="block_1_text fadeInUp animated">
-
-                <p>
-                    Complex digital marketing service for business involves use of all existing web channels to
-                    achieve
-                    targeted traffic. This allows you to get maximum from seo, context ads, social media and other
-                    channels
-                    as well as get rid of those you don't need in your business. If you want your website working
-                    for you and
-                    bring maximum profit call us today. We will find best solutions for your business regarding your
-                    industry
-                    and business needs.
-                </p>
-
-                <div class="list_1 fadeInUp animated">
-                    <h4 class="headerStyle">Our Digital Marketing Services</h4>
-                    <ul>
-                        <li> Analytics</li>
-                        <li> Digital Promotion Strategy Development</li>
-                        <li> Reputation Management</li>
-                        <li> Lead Generation</li>
-                        <li> Context Advertising</li>
-                        <li> Social Media Marketing (SMM)</li>
-                        <li> Email Marketing</li>
-                        <li> Media Advertising</li>
-                        <li> Advertising materials</li>
-                        <li> Complex Digital Marketing</li>
-                    </ul>
-                </div>
-            </div>
+    <div class="block_1">
+        <img class="imgResponsive animate__animated animate__fadeIn" src='../img/portfolio_4.jpg' alt="Vivis Organics">
+        <div class="block_1_text animate__animated animate__fadeInUp">
+            <h5 align="center">Vivi's Organics</h5> <br>
+            <p align="justify">Online store with user-friendly CMS, and popular payment systems. Sells organic
+                cosmetics for woman
+                (cream, moisturizers, etc). Website has responsive interface, looks good on all devices with
+                different size of screen.</p>
+            <p>Visit Website at : <a href='http://vivisorganic.com.tilda.ws/#rec179708850'
+                                     class="portfolioLink">Vivi's Organics</a></p> <br>
+            <p>Technologies Used: CMS Tilda, PHP, HTML5, CSS3, JavaScript, MySQL, Less, Sass</p>
         </div>
     </div>
 
@@ -259,20 +203,15 @@
 
 
 <!--===============================================================================================-->
-<script src="../scripts/wow.min.js"></script>
-<!--===============================================================================================-->
-<script>new WOW().init();</script>
-<!--===============================================================================================-->
-<script src="../scripts/fadeBlock.js"></script>
-<!--===============================================================================================-->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <!--===============================================================================================-->
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"
         integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
 <!--===============================================================================================-->
-<script src="../scripts/marketing.js"></script>
+<script src="../scripts/portfolio.js"></script>
 <!--===============================================================================================-->
 <script src="../scripts/scroll_up_button.js"></script>
+
 
 </body>
 
