--- a/services.html
+++ b/services.html
@@ -60,11 +60,11 @@
         </div>
 
         <span class="content sidenav">
-                <span><a href='./index.html'>Home</a></span>
-                <span><a href="./About.html">About</a></span>
-                <span><a href="./Services.html">Services</a></span>
-                <span><a href="./Works.html">Works</a></span>
-                <span><a href='./ContactFrom_v6/Contacts.html' target="_blank">Contact</a></span>
+                <span><a href="./index.html">Home</a></span>
+                <span><a href="./about.html">About</a></span>
+                <span><a href="./services.html">Services</a></span>
+                <span><a href="./works.html">Works</a></span>
+                <span><a href="contacts.html" target="_blank">Contact</a></span>
                 <span class="phone_navbar">
                     <span class="phone_highlight"> +1-647</span>
                     <span>-676-3661 </span>
@@ -106,7 +106,7 @@
                 </div>
                 <div class="box-wrap">
                     <div class="box_header">
-                        <div><a href='Services/Marketing.html'
+                        <div><a href='our-services/marketing.html'
                                 class="mybutton__text mybutton mybutton--animate-click-three">Digital Marketing</a>
                         </div>
                     </div>
@@ -126,7 +126,7 @@
                 </div>
                 <div class="box-wrap">
                     <div class="box_header">
-                        <div><a href='Services/Development.html'
+                        <div><a href='our-services/web-development.html'
                                 class="mybutton__text mybutton mybutton--animate-click-three">Web Development</a>
                         </div>
                     </div>
@@ -145,7 +145,7 @@
                 </div>
                 <div class="box-wrap">
                     <div class="box_header">
-                        <div><a href='Services/Web_design.html'
+                        <div><a href='our-services/web-design.html'
                                 class="mybutton__text mybutton mybutton--animate-click-three">Web Design</a></div>
                     </div>
                     <div class="box_text">
@@ -163,7 +163,7 @@
                 </div>
                 <div class="box-wrap">
                     <div class="box_header">
-                        <div><a href='Services/SEO_optimization.html'
+                        <div><a href='our-services/search-engine-optimization.html'
                                 class="mybutton__text mybutton mybutton--animate-click-three">SEO Optimization</a>
                         </div>
                     </div>
@@ -182,7 +182,7 @@
                 </div>
                 <div class="box-wrap">
                     <div class="box_header">
-                        <div><a href='Services/Ecommerce.html'
+                        <div><a href='our-services/ecommerce.html'
                                 class="mybutton__text mybutton mybutton--animate-click-three">eCommerce</a></div>
                     </div>
                     <div class="box_text">
@@ -200,7 +200,7 @@
                 </div>
                 <div class="box-wrap">
                     <div class="box_header">
-                        <div><a href='Services/Branding.html'
+                        <div><a href='our-services/branding.html'
                                 class="mybutton__text mybutton mybutton--animate-click-three">Branding</a></div>
                     </div>
                     <div class="box_text">
