--- a/about.html
+++ b/about.html
@@ -30,15 +30,14 @@
     <!--===============================================================================================-->
     <link rel="icon" type="image/png" href="img/logo/favicon.png">
     <!--===============================================================================================-->
-    <link rel="stylesheet" href="css/works_style.css">
+    <link rel="stylesheet" href="css/about_style.css">
     <!--===============================================================================================-->
     <link rel="stylesheet" href="css/fadeBlock.css">
     <!--===============================================================================================-->
     <link rel="stylesheet" media="all" href="css/animate.css">
     <!--===============================================================================================-->
-    <title>Works</title>
+    <title>About</title>
 </head>
-
 
 <body>
 <div class="page">
@@ -53,142 +52,159 @@
         <div class="menu_button">
             <nav class="wrap-myMenu">
                 <button class="main-myButton ">
-                    <svg class="ham hamRotate ham8" viewBox="0 0 100 100" width="70"
+                    <svg class="ham ham6" viewBox="0 0 100 100" width="70"
                          onclick="this.classList.toggle('active')">
                         <path class="line top"
-                              d="m 30,33 h 40 c 3.722839,0 7.5,3.126468 7.5,8.578427 0,5.451959 -2.727029,8.421573 -7.5,8.421573 h -20"/>
-                        <path class="line middle" d="m 30,50 h 40"/>
+                              d="m 30,33 h 40 c 13.100415,0 14.380204,31.80258 6.899646,33.421777 -24.612039,5.327373 9.016154,-52.337577 -12.75751,-30.563913 l -28.284272,28.284272"/>
+                        <path class="line middle"
+                              d="m 70,50 c 0,0 -32.213436,0 -40,0 -7.786564,0 -6.428571,-4.640244 -6.428571,-8.571429 0,-5.895471 6.073743,-11.783399 12.286435,-5.570707 6.212692,6.212692 28.284272,28.284272 28.284272,28.284272"/>
                         <path class="line bottom"
-                              d="m 70,67 h -40 c 0,0 -7.5,-0.802118 -7.5,-8.365747 0,-7.563629 7.5,-8.634253 7.5,-8.634253 h 20"/>
+                              d="m 69.575405,67.073826 h -40 c -13.100415,0 -14.380204,-31.80258 -6.899646,-33.421777 24.612039,-5.327373 -9.016154,52.337577 12.75751,30.563913 l 28.284272,-28.284272"/>
                     </svg>
                 </button>
         </div>
-        <ul class="contentNav sidenav">
-            <li><a href='./index.html'>Home</a></li>
-            <li><a href="./About.html">About</a></li>
-            <li><a href="./Services.html">Services</a></li>
-            <li><a href="./Works.html">Works</a></li>
-            <li><a href='./ContactFrom_v6/Contacts.html' target="_blank">Contact</a></li>
+
+        <ul class="content sidenav">
+            <li><a href="./index.html">Home</a></li>
+            <li><a href="./about.html">About</a></li>
+            <li><a href="./services.html">Services</a></li>
+            <li><a href="./works.html">Works</a></li>
+            <li><a href="./contacts.html" target="_blank">Contact</a></li>
             <li class="phone_navbar">
                 <span class="phone_highlight"> +1-647</span>
                 <span>-676-3661 </span>
             </li>
         </ul>
         </nav>
+
     </header>
+
 
     <div class="company_logo bounceIn animated">
         <a href="./index.html"> <img src='img/logo/iDigitalLogo.svg' alt="iDigital" width=250px></a>
     </div>
+
 
     <!-- Breadcrumbs -->
 
     <div class="breadcrumbs_container">
         <div class="breadcrumbs_row">
             <h4 class="breadcrumbs_title">
-                Portfolio </h4>
+                About </h4>
             <ol class="breadcrumb">
                 <li class="first-item">
-                    <a href='./index.html' style="font-size: 10pt;">Home</a>
-                <li class="last-item">Works</li>
+                    <a href='./index.html'>Home</a>
+                </li>
+                <li class="last-item">About</li>
             </ol>
         </div>
     </div>
 
+
     <!-- Block_1 -->
 
-    <!-- MAIN (Center website) -->
-    <div class="main">
-
-        <div id="myBtnContainer">
-            <button class="btn active" onclick="filterSelection('all')"> Show all</button>
-            <button class="btn" onclick="filterSelection('design')"> Web Development</button>
-            <button class="btn" onclick="filterSelection('advertisement')"> Web Design</button>
-            <button class="btn" onclick="filterSelection('branding')"> Marketing/eCommerce</button>
-        </div>
-
-        <!-- Portfolio Gallery Grid -->
-        <div class="block_1_row">
-            <div class="column design">
-                <div class="content">
-                    <a href="Portfolio/Pullr.html"><img mg src='img/portfolio_1.jpg' class="overlay" alt="Pullr"
-                                                        style="width:100%"></a>
-                    <div><a href="Portfolio/Pullr.html">PULLR</a></div>
-                    <p>Communication agency for tech & digital startups and Venture Capital companies</p>
-                </div>
-            </div>
-            <div class="column design">
-                <div class="content">
-                    <a href="Portfolio/Lost_Shirt.html"><img mg src='img/portfolio_2.jpg' class="overlay"
-                                                             alt="Loft School" style="width:100%"></a>
-                    <div><a href="Portfolio/Lost_Shirt.html">Lost Shirt</a></div>
-                    <p>Online Store with creative bright design, selling t-shirts with funny prints (all sizes)</p>
-                </div>
-            </div>
-            <div class="column design">
-                <div class="content">
-                    <a href="Portfolio/Instatech.html"><img mg src='img/portfolio_9.jpg' class="overlay"
-                                                            alt="Instatech" style="width:100%"></a>
-                    <div><a href="Portfolio/Instatech.html">Instatech</a></div>
-                    <p>Consulting services and solutions in AI • BLOCKCHAIN • CRYPTO • IOT • VR • AR • MOBILE</p>
-                </div>
-            </div>
-
-            <div class="column branding">
-                <div class="content">
-                    <a href="Portfolio/Vivis_organics.html"><img mg src='img/portfolio_4.jpg' class="overlay"
-                                                                 alt="Vivi's Organics" style="width:100%"></a>
-                    <div><a href="Portfolio/Vivis_organics.html">Vivi's Organics</a></div>
-                    <p>Online Store selling organic cosmetics products for woman for all types of skin</p>
-                </div>
-            </div>
-            <div class="column advertisement">
-                <div class="content">
-                    <a href="Portfolio/Telebot.html"><img mg src='img/portfolio_5.jpg' class="overlay" alt="TeleBot"
-                                                          style="width:100%"></a>
-                    <div><a href="Portfolio/Telebot.html">TeleBot</a></div>
-                    <p>COVID-19 Telegram Bot - shows COVID-19 statistics all over the world</p>
-                </div>
-            </div>
-            <div class="column branding">
-                <div class="content">
-                    <a href="Portfolio/Finmap.html"><img mg src='img/portfolio_6.jpg' class="overlay" alt="FinMap"
-                                                         style="width:100%"></a>
-                    <div><a href="Portfolio/Finmap.html">FinMap</a></div>
-                    <p>Online service for comprehensive and convenient financial management</p>
-                </div>
-            </div>
-
-            <div class="column advertisement">
-                <div class="content">
-                    <a href="Portfolio/Bookstore.html"><img mg src='img/portfolio_7.jpg' alt="Adventures Of Noah"
-                                                            class="overlay" style="width:100%"></a>
-                    <div><a href="Portfolio/Bookstore.html">Adventures Of Noah</a></div>
-                    <p>Online Book Store with integrated most popular payment systems and intuitive CRM system</p>
-                </div>
-            </div>
-            <div class="column advertisement">
-                <div class="content">
-                    <a href="Portfolio/Enlight.html"><img mg src='img/portfolio_8.jpg' alt="Enlight Agency"
-                                                          class="overlay" style="width:100%"></a>
-                    <div><a href="Portfolio/Enlight.html">Enlight Agency</a></div>
-                    <p>Marketing & PR Communication Agency for tech startups, VC and well-established companies.</p>
-                </div>
-            </div>
-            <div class="column advertisement">
-                <div class="content">
-                    <a href="Portfolio/Activebox.html"><img mg src='img/portfolio_3.jpg' class="overlay"
-                                                            alt="ActiveBox" style="width:100%"></a>
-                    <div><a href="Portfolio/Activebox.html">ActiveBox</a></div>
-                    <p>Universal template for multipurpose use. Template is adapted for all popular types of devices
-                    </p>
-                </div>
-            </div>
-            <!-- END GRID -->
-        </div>
-
-        <!-- END MAIN -->
+    <div class="block_1_container fadeInUp animated">
+        <h2 class="block1Text1 headerHighlight"> iDigital <h2>Web Development Company</h2>
     </div>
+
+
+    <!-- Block_2 -->
+
+    <div class="block2Row fadeInUp animated">
+        <div class="block2Column">
+        </div>
+        <div class="block2Column">
+            <div class="center">
+                <img src='img/icons/person_1.png' width="200px" class="center">
+            </div>
+            <h5>Who We Are</h5>
+            <p class="textResponsive">We are a team of Web Design and Development professionals who love
+                partnering with good people and businesses to help them achieve online success.</p>
+        </div>
+        <div class="block2Column iconResponsive" style="padding-top: 83px;">
+            <div class="center">
+                <img src='img/icons/diamond_1.png' width="200px" class="center">
+            </div>
+            <h5>What We Do</h5>
+            <p class="textResponsive">We’re focused on honing our crafts and bringing everything we have to the
+                table for our clients. We create custom, functional websites focused on converting your users into
+                customers.</p>
+        </div>
+        <div class="block2Column">
+            <div class="center">
+                <img src='img/icons/like_1.png' width="200px" class="center">
+            </div>
+            <h5>Why We Do It</h5>
+            <p class="textResponsive">Each of us loves what we do and we feel that spirit helps translate into the
+                quality of our work. Working with clients who love their work combines into a fun, wonderful
+                partnership for everyone involved.</p>
+        </div>
+        <div class="block2Column">
+        </div>
+    </div>
+
+    <!-- Block_3 -->
+
+    <div class="block_3_row fadeInUp animated">
+        <p class="textHighlight">Our main goal:
+        <p class="textResponsive"> Help your business grow and perform in a better way.</p>
+
+        <p class="textResponsive">We provide industry specific complex solutions based on your business needs.
+            We provide solutions for all types
+            of business, different level of complexity: from Landing Page to fully functional Online Store with
+            integrated comprehensive CRM and payment systems; from Logo Design to Digital Marketing Campaigns.
+            Seeing our customers growing motivates us to work even harder. That's why we
+            always go an extra-mile and provide provide full support for the launched projects.</p>
+
+        <p class="textHighlight">Technologies:
+        <p class="textResponsive">HTML5, CSS3, JavaScript, jQuery, Bootstrap, PHP, MySQL, NodeJS,
+            TypeScript, Git, React/Redux, Laravel.</p> <br>
+
+        <p class="textHighlight">Builders:
+        <p class="textResponsive">WIX, Tilda, WordPress, Squarespace, LP.</p> <br>
+
+            <a class="textHighlight" href='contacts.html' target="_blank">Contact Us</a>
+        <p class="textResponsive">today and get a free quote.</p>
+
+    </div>
+
+    <!-- <div class="block_3_column">
+                <img src="img/img_94-600x600.jpg" alt="Logo_Design" style="width:100%">
+            </div>
+            <div class="block_3_column">
+                <img src="img/img_96-600x600.jpg" alt="Advertisement" style="width:100%">
+            </div>
+            <div class="block_3_column">
+                <img src="img/img_110-600x600.jpg" alt="Branding" style="width:100%">
+            </div>
+            <div class="block_3_column">
+                <img src="img/img_98-600x600.jpg" alt="Design" style="width:100%">
+            </div>
+            <div class="block_3_column">
+                <img src="img/img_93-600x600.jpg" alt="Web_Design" style="width:100%">
+            </div>
+            <div class="block_3_column">
+                <img src="img/img_108-600x600.jpg" alt="Logo_Design" style="width:100%">
+            </div>
+            <div class="block_3_column">
+                <img src="img/img_109-600x600.jpg" alt="Branding" style="width:100%">
+            </div>
+            <div class="block_3_column">
+                <img src="img/img_111-600x600.jpg" alt="Advertisement" style="width:100%">
+            </div> -->
+
+
+    <!-- Block_4_Google Maps -->
+
+    <div class="map_responsive fadeInUp animated">
+        <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4083.28632784349!2d-79.5599158579109!3d43.64152159986878!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x882b378a1ddcfa6b%3A0xe29a22e4b21d9816!2s2%20Valhalla%20Inn%20Rd%2C%20Etobicoke%2C%20ON%20M9B%206C3!5e0!3m2!1sen!2sca!4v1612138150833!5m2!1sen!2sca"
+                width="800" height="600" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false"
+                tabindex="0"></iframe>
+    </div>
+
+
+
 
 
     <!-- Creating Scroll Up Button -->
@@ -239,7 +255,7 @@
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"
         integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
 <!--===============================================================================================-->
-<script src="scripts/works.js"></script>
+<script src="scripts/about.js"></script>
 <!--===============================================================================================-->
 <script src="scripts/scroll_up_button.js"></script>
 
