--- a/contacts.html
+++ b/contacts.html
@@ -5,27 +5,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!--===============================================================================================-->
-    <link rel="stylesheet" type="text/css" href="vendor/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="ContactFrom_v6/vendor/bootstrap/css/bootstrap.min.css">
     <!--===============================================================================================-->
-    <link rel="stylesheet" type="text/css" href="fonts/font-awesome-4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" type="text/css" href="ContactFrom_v6/fonts/font-awesome-4.7.0/css/font-awesome.min.css">
     <!--===============================================================================================-->
-    <link rel="stylesheet" type="text/css" href="fonts/Linearicons-Free-v1.0.0/icon-font.min.css">
+    <link rel="stylesheet" type="text/css" href="ContactFrom_v6/fonts/Linearicons-Free-v1.0.0/icon-font.min.css">
     <!--===============================================================================================-->
-    <link rel="stylesheet" type="text/css" href="vendor/animate/animate.css">
+    <link rel="stylesheet" type="text/css" href="ContactFrom_v6/vendor/animate/animate.css">
     <!--===============================================================================================-->
-    <link rel="stylesheet" type="text/css" href="vendor/css-hamburgers/hamburgers.min.css">
+    <link rel="stylesheet" type="text/css" href="ContactFrom_v6/vendor/css-hamburgers/hamburgers.min.css">
     <!--===============================================================================================-->
-    <link rel="stylesheet" type="text/css" href="vendor/animsition/css/animsition.min.css">
+    <link rel="stylesheet" type="text/css" href="ContactFrom_v6/vendor/animsition/css/animsition.min.css">
     <!--===============================================================================================-->
-    <link rel="stylesheet" type="text/css" href="vendor/select2/select2.min.css">
+    <link rel="stylesheet" type="text/css" href="ContactFrom_v6/vendor/select2/select2.min.css">
     <!--===============================================================================================-->
-    <link rel="stylesheet" type="text/css" href="vendor/daterangepicker/daterangepicker.css">
+    <link rel="stylesheet" type="text/css" href="ContactFrom_v6/vendor/daterangepicker/daterangepicker.css">
     <!--===============================================================================================-->
-    <link rel="stylesheet" type="text/css" href="css/util.css">
+    <link rel="stylesheet" type="text/css" href="ContactFrom_v6/css/util.css">
     <!--===============================================================================================-->
-    <link rel="icon" type="image/png" href="../img/logo/favicon.png">
+    <link rel="icon" type="image/png" href="img/logo/favicon.png">
     <!--===============================================================================================-->
-    <link rel="stylesheet" type="text/css" href="css/main.css">
+    <link rel="stylesheet" type="text/css" href="ContactFrom_v6/css/main.css">
     <!--===============================================================================================-->
 </head>
 <body>
@@ -44,7 +44,7 @@
             <i class="fa fa-close" aria-hidden="true"></i>
         </button>
 
-        <form class="contact100-form validate-form">
+        <form class="contact100-form validate-form" >
 				<span class="contact100-form-title">
 					Contact Us
 				</span>
@@ -58,28 +58,28 @@
             <div class="wrap-input100 rs1-wrap-input100 validate-input"
                  data-validate="Valid email is required: ex@abc.xyz">
                 <span class="label-input100">Email</span>
-                <input class="input100" type="text" name="email" placeholder="Enter your email addess">
+                <input class="input100" type="email" name="email" placeholder="Enter your email addess">
                 <span class="focus-input100"></span>
             </div>
 
             <div class="wrap-input100 validate-input" data-validate="Message is required">
                 <span class="label-input100">Message</span>
-                <textarea class="input100" name="message" placeholder="Your message here..."></textarea>
+                <textarea type="text" class="input100" name="message" placeholder="Your message here..."></textarea>
                 <span class="focus-input100"></span>
             </div>
 
             <div class="container-contact100-form-btn">
-                <button class="contact100-form-btn" href="mailto:sales@idigitalstudio.ca">
+                <button class="contact100-form-btn">
 						<span>
 							Submit
 							<i class="fa fa-long-arrow-right m-l-7" aria-hidden="true"></i>
 						</span>
-                </button>
+				</button>
             </div>
         </form>
 
         <span class="contact100-more">
-				For any question contact us: <span class="contact100-more-highlight">+1-647-676-3661</span>
+				For any question please Contact Us: <span class="contact100-more-highlight">+1-647-676-3661</span>
 			</span>
     </div>
 </div>
@@ -88,24 +88,24 @@
 <div id="dropDownSelect1"></div>
 
 <!--===============================================================================================-->
-<script src="vendor/jquery/jquery-3.2.1.min.js"></script>
+<script src="ContactFrom_v6/vendor/jquery/jquery-3.2.1.min.js"></script>
 <!--===============================================================================================-->
-<script src="vendor/animsition/js/animsition.min.js"></script>
+<script src="ContactFrom_v6/vendor/animsition/js/animsition.min.js"></script>
 <!--===============================================================================================-->
-<script src="vendor/bootstrap/js/popper.js"></script>
-<script src="vendor/bootstrap/js/bootstrap.min.js"></script>
+<script src="ContactFrom_v6/vendor/bootstrap/js/popper.js"></script>
+<script src="ContactFrom_v6/vendor/bootstrap/js/bootstrap.min.js"></script>
 <!--===============================================================================================-->
-<script src="vendor/select2/select2.min.js"></script>
+<script src="ContactFrom_v6/vendor/select2/select2.min.js"></script>
 <!--===============================================================================================-->
-<script src="vendor/daterangepicker/moment.min.js"></script>
-<script src="vendor/daterangepicker/daterangepicker.js"></script>
+<script src="ContactFrom_v6/vendor/daterangepicker/moment.min.js"></script>
+<script src="ContactFrom_v6/vendor/daterangepicker/daterangepicker.js"></script>
 <!--===============================================================================================-->
-<script src="vendor/countdowntime/countdowntime.js"></script>
+<script src="ContactFrom_v6/vendor/countdowntime/countdowntime.js"></script>
 <!--===============================================================================================-->
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBn1eSo4rdgPjWoJAXOOPhTEU90m3GTDyM"></script>
-<script src="js/map-custom.js"></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAn7eSf_-9YGXwdj52AKMWOmsrVAZbiLy0"></script>
+<script src="ContactFrom_v6/js/map-custom.js"></script>
 <!--===============================================================================================-->
-<script src="js/main.js"></script>
+<script src="ContactFrom_v6/js/main.js"></script>
 
 
 <!-- Global site tag (gtag.js) - Google Analytics -->
