--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="facebook-domain-verification" content="hz7a5cf6k9ytterfbmkttywh8847wz" />
     <link rel="stylesheet" href="css/index_reset.css">
     <link href="https://fonts.googleapis.com/css?family=Muli:300,400,700,900" rel="stylesheet">
     <link rel="stylesheet" href="css/index_style.css">
@@ -84,11 +85,11 @@
         </div>
 
         <ul class="content sidenav">
-            <li><a href='./index.html'>Home</a></li>
-            <li><a href="./About.html">About</a></li>
-            <li><a href="./Services.html">Services</a></li>
-            <li><a href="./Works.html">Works</a></li>
-            <li><a href='./ContactFrom_v6/Contacts.html' target="_blank">Contact</a></li>
+            <li><a href="./index.html">Home</a></li>
+            <li><a href="./about.html">About</a></li>
+            <li><a href="./services.html">Services</a></li>
+            <li><a href="./works.html">Works</a></li>
+            <li><a href="./contacts.html" target="_blank">Contact</a></li>
             <li class="phone_navbar">
                 <span class="phone_highlight"> +1-647</span>
                 <span>-676-3661 </span>
@@ -132,11 +133,11 @@
                 </div>
             </div>
             <div id="slides-aux" class="slides mask">
-                <h2 class="slide-title slide" data-index="0"><a href="./Services/Development.html">Web Development</a>
+                <h2 class="slide-title slide" data-index="0"><a href="our-services/web-development.html">Web Development</a>
                 </h2>
-                <h2 class="slide-title slide" data-index="1"><a href="./Services/Web_design.html">Design</a></h2>
-                <h2 class="slide-title slide" data-index="2"><a href="./Services/Marketing.html">Marketing</a></h2>
-                <h2 class="slide-title slide" data-index="3"><a href="./Services/SEO_optimization.html">SEO</a></h2>
+                <h2 class="slide-title slide" data-index="1"><a href="our-services/web-design.html">Web Design</a></h2>
+                <h2 class="slide-title slide" data-index="2"><a href="our-services/marketing.html">Digital Marketing</a></h2>
+                <h2 class="slide-title slide" data-index="3"><a href="our-services/search-engine-optimization.html">SEO</a></h2>
             </div>
         </div>
         <div id="info">
@@ -151,7 +152,7 @@
                     UI/UX Design -<br/>
                     Web Development -<br/>
                     Digital Marketing -<br/>
-                    <a href='./ContactFrom_v6/Contacts.html' target="_blank">Contact Us</a> Today to Learn More
+                    <a href='contacts.html' target="_blank">Contact Us</a> Today to Learn More
                 </p>
             </div>
         </div>
@@ -188,7 +189,7 @@
             </div>
 
             <div class="block2Text3">
-                <a href='./ContactFrom_v6/Contacts.html' target="_blank">Contact Us Now to Learn More</a>
+                <a href='contacts.html' target="_blank">Contact Us Now to Learn More</a>
             </div>
             <div class="block2Text4">
                 <p>+1-647-676-3661
@@ -219,35 +220,53 @@
         <div class='block3ColumnStyle'>
             <div class="block3Column  wow fadeInUp">
                 <i class="fa fa-bullhorn fa-3x logofa"></i>
-                <h5 class="block3ColumnMainText">Marketing</h5>
+                <div><a href='our-services/marketing.html'
+                        class="block3ColumnMainText">Digital Marketing</a>
+                </div>
+<!--                <h5 class="block3ColumnMainText">Marketing</h5>-->
                 <p class="block3ColumnSecText">We use strategic marketing tactics that have been proven to work</p>
             </div>
             <div class="block3Column wow fadeInUp">
                 <i class="fa fa-code fa-3x logofa"></i>
-                <h5 class="block3ColumnMainText">Development</h5>
+                <div><a href='our-services/web-development.html'
+                        class="block3ColumnMainText">Web Development</a>
+                </div>
+<!--                <h5 class="block3ColumnMainText">Development</h5>-->
                 <p class="block3ColumnSecText">Custom programming for most complex functions you can think of</p>
             </div>
             <div class="block3Column wow fadeInUp">
                 <i class="fa fa-cubes fa-3x logofa"></i>
-                <h5 class="block3ColumnMainText">Web Design</h5>
+                <div><a href='our-services/web-design.html'
+                        class="block3ColumnMainText">Web Design</a>
+                </div>
+<!--                <h5 class="block3ColumnMainText">Web Design</h5>-->
                 <p class="block3ColumnSecText">Powerful web design that will out-perform your strongest competitors</p>
             </div>
             <div class="block3Column wow fadeInUp">
                 <i class="fa fa-laptop fa-3x logofa"></i>
-                <h5 class="block3ColumnMainText">SEO</h5>
+                <div><a href='our-services/search-engine-optimization.html'
+                        class="block3ColumnMainText">SEO</a>
+                </div>
+<!--                <h5 class="block3ColumnMainText">SEO</h5>-->
                 <p class="block3ColumnSecText">Optimizing our web designs to rank on the first page of google is our
                     specialty</p>
             </div>
             <div class="block3Column wow fadeInUp">
                 <i class="fa fa-money fa-3x logofa"></i>
-                <h5 class="block3ColumnMainText">Ecommerce</h5>
+                <div><a href='our-services/ecommerce.html'
+                        class="block3ColumnMainText">eCommerce</a>
+                </div>
+<!--                <h5 class="block3ColumnMainText">Ecommerce</h5>-->
                 <p class="block3ColumnSecText">We build your unique online store using latest tools and technologies</p>
             </div>
             <div class="block3Column wow fadeInUp">
                 <i class="fa fa-briefcase fa-3x logofa"></i>
-                <h5 class="block3ColumnMainText">Branding</h5>
+                <div><a href='our-services/branding.html'
+                        class="block3ColumnMainText">Branding</a>
+                </div>
+<!--                <h5 class="block3ColumnMainText">Branding</h5>-->
                 <p class="block3ColumnSecText">A solid brand strategy, logo and guidelines help you to gain trust of
-                    your customerss</p>
+                    your customers</p>
             </div>
         </div>
     </div>
@@ -281,7 +300,7 @@
         <div class="block4Column">
             <div class="contentWrapper wow zoomIn">
                 <div class="block4Picture">
-                    <a href="Portfolio/Pullr.html"><img src='img/portfolio_1.jpg' alt="PULLR" style="width:100%"></a>
+                    <a href="portfolio/pullr.html"><img src='img/portfolio_1.jpg' alt="PULLR" style="width:100%"></a>
                 </div>
                 <h5 class="block4Logo">PULLR</h5>
                 <p class="block4ColumnSecText"><span class="styleDesign"></span>
@@ -292,7 +311,7 @@
         <div class="block4Column">
             <div class="contentWrapper wow zoomIn">
                 <div class="block4Picture">
-                    <a href="Portfolio/Lost_Shirt.html"><img src='img/portfolio_2.jpg' alt="Lost Shirt"
+                    <a href="portfolio/lost_shirt.html"><img src='img/portfolio_2.jpg' alt="Lost Shirt"
                                                              style="width:100%"></a>
                 </div>
                 <h5 class="block4Logo">Lost Shirt</h5>
@@ -303,7 +322,7 @@
         <div class="block4Column">
             <div class="contentWrapper wow zoomIn">
                 <div class="block4Picture">
-                    <a href="Portfolio/Instatech.html"><img src='img/portfolio_9.jpg' alt="Instatech"
+                    <a href="portfolio/instatech.html"><img src='img/portfolio_9.jpg' alt="Instatech"
                                                             style="width:100%"></a>
                 </div>
                 <h5 class="block4Logo">Instatech</h5>
@@ -315,7 +334,7 @@
         <div class="block4Column">
             <div class="contentWrapper wow zoomIn">
                 <div class="block4Picture">
-                    <a href="Portfolio/Vivis_organics.html"><img src='img/portfolio_4.jpg' alt="Vivi's Organics"
+                    <a href="portfolio/vivis_organics.html"><img src='img/portfolio_4.jpg' alt="Vivi's Organics"
                                                                  style="width:100%"></a>
                 </div>
                 <h5 class="block4Logo">Vivi's Organics</h5>
@@ -326,7 +345,7 @@
         <div class="block4Column">
             <div class="contentWrapper wow zoomIn">
                 <div class="block4Picture">
-                    <a href="Portfolio/Telebot.html"><img src='img/portfolio_5.jpg' alt="TeleBot"
+                    <a href="portfolio/telebot.html"><img src='img/portfolio_5.jpg' alt="TeleBot"
                                                           style="width:100%"></a>
                 </div>
                 <h5 class="block4Logo">TeleBot</h5>
@@ -337,7 +356,7 @@
         <div class="block4Column">
             <div class="contentWrapper wow zoomIn">
                 <div class="block4Picture">
-                    <a href="Portfolio/Finmap.html"><img src='img/portfolio_6.jpg' alt="FinMap" style="width:100%"></a>
+                    <a href="portfolio/finmap.html"><img src='img/portfolio_6.jpg' alt="FinMap" style="width:100%"></a>
                 </div>
                 <h5 class="block4Logo">FinMap</h5>
                 <p class="block4ColumnSecText">Online service for comprehensive and convenient financial management</p>
@@ -347,7 +366,7 @@
         <div class="block4Column">
             <div class="contentWrapper wow zoomIn">
                 <div class="block4Picture">
-                    <a href="Portfolio/Bookstore.html"><img src='img/portfolio_7.jpg' alt="Adventures Of Noah"
+                    <a href="portfolio/bookstore.html"><img src='img/portfolio_7.jpg' alt="Adventures Of Noah"
                                                             style="width:100%"></a>
                 </div>
                 <h5 class="block4Logo">Adventures Of Noah</h5>
@@ -358,7 +377,7 @@
         <div class="block4Column">
             <div class="contentWrapper wow zoomIn">
                 <div class="block4Picture">
-                    <a href="Portfolio/Enlight.html"><img src='img/portfolio_8.jpg' alt="Enlight Agency"
+                    <a href="portfolio/enlight.html"><img src='img/portfolio_8.jpg' alt="Enlight Agency"
                                                           style="width:100%"></a>
                 </div>
                 <h5 class="block4Logo">Enlight Agency</h5>
@@ -373,20 +392,20 @@
 
     <div class="container-contact100 wow fadeInUp">
         <div class="wrap-contact100">
-            <form class="contact100-form validate-form">
+            <form action="contact.php" method="post" class="contact100-form validate-form">
                 <span class="contact100-form-title">
                     Say Hello!
                 </span>
 
                 <div class="wrap-input100 validate-input" data-validate="Name is required">
                     <span class="label-input100">Your Name</span>
-                    <input class="input100" type="text" name="name" placeholder="Enter your name">
+                    <input class="input100" type="text" name="cf_name" placeholder="Enter your name">
                     <span class="focus-input100"></span>
                 </div>
 
                 <div class="wrap-input100 validate-input" data-validate="Valid email is required: ex@abc.xyz">
                     <span class="label-input100">Email</span>
-                    <input class="input100" type="text" name="email" placeholder="Enter your email addess">
+                    <input class="input100" type="text" name="cf_email" placeholder="Enter your email address">
                     <span class="focus-input100"></span>
                 </div>
 
@@ -396,7 +415,7 @@
                         <select class="selection-2" name="service">
                             <option>Choose Services</option>
                             <option>Web Development</option>
-                            <option>eCommerce Bussiness</option>
+                            <option>eCommerce Business</option>
                             <option>UI/UX Design</option>
                             <option>Digital Marketing</option>
                             <option>SEO</option>
@@ -425,7 +444,7 @@
 
                 <div class="wrap-input100 validate-input" data-validate="Message is required">
                     <span class="label-input100">Message</span>
-                    <textarea class="input100" name="message" placeholder="Your message here..."></textarea>
+                    <textarea class="input100" name="cf_message" placeholder="Your message here..."></textarea>
                     <span class="focus-input100"></span>
                 </div>
 
