--- a/our-services/branding.html
+++ b/our-services/branding.html
@@ -36,7 +36,7 @@
     <!--===============================================================================================-->
     <link rel="stylesheet" media="all" href="../css/animate.css">
     <!--===============================================================================================-->
-    <title>Development</title>
+    <title>Branding</title>
 </head>
 
 <body>
@@ -65,11 +65,11 @@
         </div>
 
         <ul class="content sidenav">
-            <li><a href='../index.html'>Home</a></li>
-            <li><a href="../About.html">About</a></li>
-            <li><a href="../Services.html">Services</a></li>
-            <li><a href="../Works.html">Works</a></li>
-            <li><a href='../ContactFrom_v6/Contacts.html' target="_blank">Contact</a></li>
+            <li><a href="../index.html">Home</a></li>
+            <li><a href="../about.html">About</a></li>
+            <li><a href="../services.html">Services</a></li>
+            <li><a href="../works.html">Works</a></li>
+            <li><a href="../contacts.html" target="_blank">Contact</a></li>
             <li class="phone_navbar">
                 <span class="phone_highlight"> +1-647</span>
                 <span>-676-3661 </span>
@@ -89,15 +89,15 @@
     <div class="breadcrumbs_container">
         <div class="breadcrumbs_row">
             <h4 class="breadcrumbs_title">
-                Web Development </h4>
+                Branding </h4>
             <ol class="breadcrumb">
                 <li class="first-item">
                     <a href='../index.html'>Home</a>
                 </li>
                 <li class="second-item">
-                    <a href='../Services.html'>Our Services</a>
+                    <a href='../services.html'>Our Services</a>
                 </li>
-                <li class="last-item">Web Development</li>
+                <li class="last-item">Branding</li>
             </ol>
         </div>
     </div>
@@ -107,55 +107,54 @@
 
     <div class="block_1_row">
 
-        <div class="block_1_column_2  fadeInUp animated">
+        <div class="block_1_column_2 fadeInUp animated">
             <div class="block_1_image">
-                <img src='../img/img_310.jpg' width=100%/>
+                <img src='../img/img_314.jpg' width=100%/>
             </div>
         </div>
 
-        <div class="block_1_column_1  fadeInUp animated">
+        <div class="block_1_column_1 fadeInUp animated">
             <div class="block_1_header">
-                <h4> Make Website Your Digital Asset </h4>
+                <h4> Need a Fresh Way to Grab Attention of Your Customers or Find New Ones? </h4>
             </div>
             <div class="block_1_text">
-                <p> You have a vision on how the ideal website should look like?
-                    Just share your thoughts with us and we'll make them real! </p>
-                <p> Website development – is an investment in your own business, in creating a valuable digital
-                    asset. Such asset increases capitalization of your business. It often becomes the main
-                    intangible asset
-                    of the company. We offer services different level of complexity regardless your business needs.
-                    Either you are personal entrepreneur or you operate big international corporation - we can
-                    always find a solution that suits your needs best. </p>
-                <p> From turnkey basis to renovation of already existing website we use latest web developing tools
-                    and technologies to make sure you will get fast, reliable, responsive website optimized
-                    for search engines. </p>
+                <p> Branding is fundamental for every company, no matter what this field might be.
+                    It could be products or services. Branding is equally important and it needs to run smoothly, at
+                    all costs.
+                    Right branding strategy can not only grow your company’s profits, but also help your business
+                    evolve and even grow into new markets. </p>
+
+                <p> Using latest methods of design thinking, together with the client, we form an integral brand
+                    platform that allows the company to reach a new level of development, clearly aware of its
+                    competitive advantages and values.
+                    <a class="textHighlight" href='../contacts.html' target="_blank">Contact Us Today to Learn More</a>
             </div>
         </div>
-
     </div>
 
     <div class="block_1_row">
         <div class="block_1_column_3">
             <div class="block_1_text fadeInUp animated">
-                <p>Your customers want to find and do business with your organization completely online,
-                    so bringing your business online isn’t a choice — it’s a necessity. The more value you are able
-                    to provide through digital channels, the higher chances that you will remain relevant to your
-                    customers. We help businesses invent and develop new digital products as well as streamline
-                    existing customer-facing online services, by researching the market, developing delightful
-                    and valuable user experiences, and engineering highly efficient web-and-mobile-native systems.
-                    We make sure you outstand from competitors with unique design and user-friendly interface. </p>
+
+                <p> It is important to understand the concept of a brand in order to understand what branding
+                    exactly is. A brand is the "image" or reputation of the product or service that customer
+                    familiar
+                    with by identifying the logo, slogan, design, or name of the company. Branding is the
+                    process to market that "image" of a product or service so that it can be easily
+                    recognized in a competitive market. The process is about creating a
+                    unique image for a product in consumer’s mind. By creating a brand, you market a
+                    promise that explains what your customers should expect from your products and services. </p>
 
                 <div class="list_1 fadeInUp animated">
-                    <h4 class="headerStyle"> Our Websites - It's Always Complex Approach </h4>
+                    <h4 class="headerStyle"> We Provide Full Range of Branding Services: </h4>
                     <ul>
-                        <li> Landing pages</li>
-                        <li> Business card websites</li>
-                        <li> Portfolios</li>
-                        <li> Magazine websites</li>
-                        <li> eCommerce websites</li>
-                        <li> Educational websites</li>
-                        <li> Blogs</li>
-                        <li> Individual solutions of any complexity</li>
+                        <li> Logo design</li>
+                        <li> Brand messaging</li>
+                        <li> Brand positioning</li>
+                        <li> Brand voice</li>
+                        <li> Style guide</li>
+                        <li> Social media branding</li>
+                        <li> Promotional marketing materials</li>
                     </ul>
                 </div>
             </div>
@@ -258,9 +257,8 @@
 <!--===============================================================================================-->
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"
         integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-
 <!--===============================================================================================-->
-<script src="../scripts/development.js"></script>
+<script src="../scripts/branding.js"></script>
 <!--===============================================================================================-->
 <script src="../scripts/scroll_up_button.js"></script>
 
