--- a/our-services/ecommerce.html
+++ b/our-services/ecommerce.html
@@ -30,11 +30,13 @@
     <!--===============================================================================================-->
     <link rel="icon" type="image/png" href="../img/logo/favicon.png">
     <!--===============================================================================================-->
-    <link rel="stylesheet" href="../css/portfolio_style.css">
+    <link rel="stylesheet" href="../css/services_subpage_style.css">
     <!--===============================================================================================-->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+    <link rel="stylesheet" href="../css/fadeBlock.css">
     <!--===============================================================================================-->
-    <title>Portfolio</title>
+    <link rel="stylesheet" media="all" href="../css/animate.css">
+    <!--===============================================================================================-->
+    <title>eCommerce</title>
 </head>
 
 <body>
@@ -63,11 +65,11 @@
         </div>
 
         <ul class="content sidenav">
-            <li><a href='../index.html'>Home</a></li>
-            <li><a href="../About.html">About</a></li>
-            <li><a href="../Services.html">Services</a></li>
-            <li><a href="../Works.html">Works</a></li>
-            <li><a href='../ContactFrom_v6/Contacts.html' target="_blank">Contact</a></li>
+            <li><a href="../index.html">Home</a></li>
+            <li><a href="../about.html">About</a></li>
+            <li><a href="../services.html">Services</a></li>
+            <li><a href="../works.html">Works</a></li>
+            <li><a href="../contacts.html" target="_blank">Contact</a></li>
             <li class="phone_navbar">
                 <span class="phone_highlight"> +1-647</span>
                 <span>-676-3661 </span>
@@ -87,15 +89,15 @@
     <div class="breadcrumbs_container">
         <div class="breadcrumbs_row">
             <h4 class="breadcrumbs_title">
-                Portfolio </h4>
+                eCommerce </h4>
             <ol class="breadcrumb">
                 <li class="first-item">
                     <a href='../index.html'>Home</a>
                 </li>
                 <li class="second-item">
-                    <a href='../Works.html'>Works</a>
+                    <a href='../services.html'>Our Services</a>
                 </li>
-                <li class="last-item">Pullr</li>
+                <li class="last-item">eCommerce</li>
             </ol>
         </div>
     </div>
@@ -103,20 +105,58 @@
 
     <!-- Block_1 -->
 
-    <!-- Block_1 -->
+    <div class="block_1_row">
 
-    <div class="block_1">
-        <img class="imgResponsive animate__animated animate__fadeIn" src='../img/portfolio_1.jpg' alt="Pullr">
-        <div class="block_1_text animate__animated animate__fadeInUp">
-            <h5 align="center">PULLR</h5> <br>
-            <p align="justify">Agency pulls significant tech startups (blockchain, crypto, fintech, AI, IoT etc.)
-                and distinguished Venture Capital firms together. PULLR helps startups enhance investment cases,
-                connect to the appropriate VCs with the right messages, and raise capital.</p>
-            <p align="justify">PULLR provides a comprehensive range of communications services, including integrated
-                marketing and strategic PR campaigns, to build strong brands for the VC firms, help them engage the
-                global audience, and become successful.</p>
-            <p>Visit Website at : <a href='https://savazh.github.io/pullr/' class="portfolioLink">PULLR</a></p> <br>
-            <p>Technologies Used: HTML5, CSS3, JavaScript, PHP, MySQL, Less, Sass</p>
+        <div class="block_1_column_2 fadeInUp animated">
+            <div class="block_1_image">
+                <img src='../img/img_315.jpg' width=100%/>
+            </div>
+        </div>
+
+        <div class="block_1_column_1 fadeInUp animated">
+            <div class="block_1_header">
+                <h4> Need a New Digital Strategy? </h6>
+            </div>
+            <div class="block_1_text">
+                <p> You are just making your first steps in eCommerce or you want to get a small, but profitable
+                    online store - iDigital Studio is your choice. We will derive your eCommerce to a completely
+                    new level of efficiency. We work with most popular eCommerce platforms in the world or just
+                    create your personal multifunctional eCommerce project, with perfect design and
+                    thoughtful automation on turnkey basis. </p>
+
+                <p> eCommerce is no longer seen as an option. It is a necessary tool for the development of a
+                    business selling goods or services. While developing an online store, we will provide
+                    integration of all necessary services: payment systems; CRM-systems; delivery;
+                    analytical software; contact forms, etc.
+                    <a class="textHighlight" href='../contacts.html' target="_blank">Contact Us Today to
+                        Learn More</a>
+            </div>
+        </div>
+    </div>
+
+    <div class="block_1_row">
+        <div class="block_1_column_3">
+            <div class="block_1_text fadeInUp animated">
+                <p> To create an online store, we perform a detailed study of company needs, determining
+                    what should be achieved by its online representation. This is how we find the optimal solutions
+                    targeted at a specific niche. Even on store design stage, best practices are ipmplemented to
+                    increasen the number of sales and requests from the site. </p>
+
+                <div class="list_1 fadeInUp animated">
+                    <h4 class="headerStyle"> Advantages of eCommerce: </h4>
+                    <ul>
+                        <li> Faster buying/selling procedure, as well as easy to find products</li>
+                        <li> Buying/selling 24/7</li>
+                        <li> More reach to customers, there is no theoretical geographic limitations</li>
+                        <li> Low operational costs and better quality of services</li>
+                        <li> No need of physical company set-ups</li>
+                        <li> Easy to start and manage a business</li>
+                        <li> Customers can easily select products from different providers without moving around
+                            physically
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </div>
     </div>
 
@@ -206,15 +246,20 @@
 
 
 <!--===============================================================================================-->
+<script src="../scripts/wow.min.js"></script>
+<!--===============================================================================================-->
+<script>new WOW().init();</script>
+<!--===============================================================================================-->
+<script src="../scripts/fadeBlock.js"></script>
+<!--===============================================================================================-->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <!--===============================================================================================-->
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"
         integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
 <!--===============================================================================================-->
-<script src="../scripts/portfolio.js"></script>
+<script src="../scripts/ecommerce.js"></script>
 <!--===============================================================================================-->
 <script src="../scripts/scroll_up_button.js"></script>
-
 
 </body>
 
