--- a/our-services/marketing.html
+++ b/our-services/marketing.html
@@ -36,7 +36,7 @@
     <!--===============================================================================================-->
     <link rel="stylesheet" media="all" href="../css/animate.css">
     <!--===============================================================================================-->
-    <title>Web Design</title>
+    <title>Digital Marketing</title>
 </head>
 
 <body>
@@ -46,8 +46,6 @@
     <!--Header-->
 
     <header class="header" id="myHeader">
-
-        <a href="#" id="scroll_top11" title="Наверх"></a>
 
         <!--Right-Sided Navigation-->
 
@@ -67,11 +65,11 @@
         </div>
 
         <ul class="content sidenav">
-            <li><a href='../index.html'>Home</a></li>
-            <li><a href="../About.html">About</a></li>
-            <li><a href="../Services.html">Services</a></li>
-            <li><a href="../Works.html">Works</a></li>
-            <li><a href='../ContactFrom_v6/Contacts.html' target="_blank">Contact</a></li>
+            <li><a href="../index.html">Home</a></li>
+            <li><a href="../about.html">About</a></li>
+            <li><a href="../services.html">Services</a></li>
+            <li><a href="../works.html">Works</a></li>
+            <li><a href="../contacts.html" target="_blank">Contact</a></li>
             <li class="phone_navbar">
                 <span class="phone_highlight"> +1-647</span>
                 <span>-676-3661 </span>
@@ -91,74 +89,84 @@
     <div class="breadcrumbs_container">
         <div class="breadcrumbs_row">
             <h4 class="breadcrumbs_title">
-                Web Design </h4>
+                Digital Marketing </h4>
             <ol class="breadcrumb">
                 <li class="first-item">
                     <a href='../index.html'>Home</a>
                 </li>
                 <li class="second-item">
-                    <a href='../Services.html'>Our Services</a>
+                    <a href='../services.html'>Our Services</a>
                 </li>
-                <li class="last-item">Web Design</li>
+                <li class="last-item">Digital Marketing</li>
             </ol>
         </div>
     </div>
 
 
     <!-- Block_1 -->
-
     <div class="block_1_row">
 
         <div class="block_1_column_2 fadeInUp animated">
             <div class="block_1_image">
-                <img src='../img/img_313.jpg' width=100%/>
+                <img src='../img/img_312.jpg' width=100%/>
             </div>
         </div>
 
         <div class="block_1_column_1 fadeInUp animated">
             <div class="block_1_header">
-                <h4> It's Not Just Design - It's the Face of Your Company </h4>
+                <h4>Outstand - is Always a Win-Win Strategy</h4>
             </div>
-
             <div class="block_1_text">
-                <p> Presence of the company in the Internet through website is an essential condition to attract new
-                    customers but... it's not enough. Positive result and gain of audience is usually achieved due
-                    to how beautiful and user friendly it is. iDigital Studio can help you with it! Our team of
-                    professional designers will create you unique design which will grab you customer's attention
-                    at the first look. We use latest design tools and techniques following
-                    your requirements until you are completely satisfied. </p>
-
-                <p> A comprehensive understanding of the functional, personal and business goals of your customers -
-                    creating a user experience that resolves them elegantly. </p>
+                <p>
+                    We offer Digital marketing solutions that generate a return on investment (ROI).
+                    Starting with Search Engine Optimization (SEO), Search Engine Marketing (SEM) and website
+                    monitoring.
+                </p>
+                <p>
+                    We will promote your brand and increase sales with complex approach, using all Internet
+                    marketing tools.
+                    Context advertising, SMM, lead generation, retargeting, YouTube advertising and much more.
+                </p>
+                <p>
+                    Professional digital marketing services allows you to achieve real goals:
+                    systematical growth of business, increase your brand awareness, loyalty from target audience and
+                    most important - increase profits. You will learn how which channel works separately and in
+                    complex with others, and what advantages it brings to your business.
+                </p>
             </div>
         </div>
+
     </div>
 
     <div class="block_1_row">
         <div class="block_1_column_3">
             <div class="block_1_text fadeInUp animated">
-                <p> Leaving your customers satisfied not
-                    only with the results they expected but even with some that they didn’t - is the key to
-                    developing winning products. We will help you research, prototype and design a product
-                    that will be valuable for its users and highly effective for your business to make sure
-                    you not only attract your customers but also pass on the message conveniently. </p>
 
-                <p> We operate effectively and successfully on any level of immersion to the business environment
-                    both at the executive level and at the level of discretionary management of the projects.
-                    We are always ready to offer optimal model of cooperation in every specific situation.
-                    We prepare text, graphic and multimedia content that makes the visitor stay on the website
-                    and which reveals unique features of the brand, it deepens the impression and intensifies the
-                    impact, convinces and sells. Also we write scripts and produce promotional videos.</p>
+                <p>
+                    Complex digital marketing service for business involves use of all existing web channels to
+                    achieve
+                    targeted traffic. This allows you to get maximum from seo, context ads, social media and other
+                    channels
+                    as well as get rid of those you don't need in your business. If you want your website working
+                    for you and
+                    bring maximum profit call us today. We will find best solutions for your business regarding your
+                    industry
+                    and business needs.
+                </p>
 
                 <div class="list_1 fadeInUp animated">
-                    <h4 class="headerStyle"> iDigital Use Modern Design and Technology for: </h4>
+                    <h4 class="headerStyle">Our Digital Marketing Services</h4>
                     <ul>
-                        <li> Interface Design</li>
-                        <li> Logo Design</li>
-                        <li> Banners</li>
-                        <li> Promotional Videos</li>
-                        <li> Infographics</li>
-                        <li> Individual solutions of any complexity</li>
+                        <li> Analytics</li>
+                        <li> Digital Promotion Strategy Development</li>
+                        <li> Reputation Management</li>
+                        <li> Lead Generation</li>
+                        <li> Context Advertising</li>
+                        <li> Social Media Marketing (SMM)</li>
+                        <li> Email Marketing</li>
+                        <li> Media Advertising</li>
+                        <li> Advertising materials</li>
+                        <li> Complex Digital Marketing</li>
                     </ul>
                 </div>
             </div>
@@ -262,7 +270,7 @@
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"
         integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
 <!--===============================================================================================-->
-<script src="../scripts/web_design.js"></script>
+<script src="../scripts/marketing.js"></script>
 <!--===============================================================================================-->
 <script src="../scripts/scroll_up_button.js"></script>
 
