--- a/our-services/search-engine-optimization.html
+++ b/our-services/search-engine-optimization.html
@@ -30,11 +30,13 @@
     <!--===============================================================================================-->
     <link rel="icon" type="image/png" href="../img/logo/favicon.png">
     <!--===============================================================================================-->
-    <link rel="stylesheet" href="../css/portfolio_style.css">
+    <link rel="stylesheet" href="../css/services_subpage_style.css">
     <!--===============================================================================================-->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+    <link rel="stylesheet" href="../css/fadeBlock.css">
     <!--===============================================================================================-->
-    <title>Portfolio</title>
+    <link rel="stylesheet" media="all" href="../css/animate.css">
+    <!--===============================================================================================-->
+    <title>SEO</title>
 </head>
 
 <body>
@@ -63,11 +65,11 @@
         </div>
 
         <ul class="content sidenav">
-            <li><a href='../index.html'>Home</a></li>
-            <li><a href="../About.html">About</a></li>
-            <li><a href="../Services.html">Services</a></li>
-            <li><a href="../Works.html">Works</a></li>
-            <li><a href='../ContactFrom_v6/Contacts.html' target="_blank">Contact</a></li>
+            <li><a href="../index.html">Home</a></li>
+            <li><a href="../about.html">About</a></li>
+            <li><a href="../services.html">Services</a></li>
+            <li><a href="../works.html">Works</a></li>
+            <li><a href="../contacts.html" target="_blank">Contact</a></li>
             <li class="phone_navbar">
                 <span class="phone_highlight"> +1-647</span>
                 <span>-676-3661 </span>
@@ -81,20 +83,21 @@
         <a href="../index.html"> <img src='../img/logo/iDigitalLogo.svg' alt="iDigital" width=250px></a>
     </div>
 
+
     <!-- Breadcrumbs -->
 
     <div class="breadcrumbs_container">
         <div class="breadcrumbs_row">
             <h4 class="breadcrumbs_title">
-                Portfolio </h4>
+                SEO Optimization </h4>
             <ol class="breadcrumb">
                 <li class="first-item">
                     <a href='../index.html'>Home</a>
                 </li>
                 <li class="second-item">
-                    <a href='../Works.html'>Works</a>
+                    <a href='../services.html'>Our Services</a>
                 </li>
-                <li class="last-item">Lost Shirt</li>
+                <li class="last-item">SEO Optimization</li>
             </ol>
         </div>
     </div>
@@ -102,17 +105,69 @@
 
     <!-- Block_1 -->
 
-    <div class="block_1">
-        <img class="imgResponsive animate__animated animate__fadeIn" src='../img/portfolio_2.jpg' alt="Lost Shirt">
-        <div class="block_1_text animate__animated animate__fadeInUp">
-            <h5 align="center">Lost Shirt</h5> <br>
-            <p align="justify">Online Store with integrated most popular payment systems and intuitive user-friendly
-                CRM system</p>
-            <p align="justify">Store sells t-shirts different sizes for all genders. Pickup and delivery options are
-                available.</p>
-            <p>Visit Website at: <a href='https://savazh.github.io/lost-shirt/' class="portfolioLink">Lost Shirt</a>
-            </p> <br>
-            <p>Technologies Used: HTML5, CSS3, JavaScript, PHP, MySQL, Less, Sass</p>
+    <div class="block_1_row">
+
+        <div class="block_1_column_2 fadeInUp animated">
+            <div class="block_1_image">
+                <img src='../img/img_311.jpg' width=100%/>
+            </div>
+        </div>
+
+        <div class="block_1_column_1 fadeInUp animated">
+            <div class="block_1_header">
+                <h4>We Will Bring Your Website to the Top of Search Results</h4>
+            </div>
+            <div class="block_1_text">
+                <p>
+                    SEO Optimization - is bringing your website to the first page of search results in different
+                    search engines
+                    like Google or Yahoo. According to the latest research even if you disable context advertising
+                    from any top-site,
+                    it will save up to 48% of traffic. Website will attract visitors automatically. Search engine
+                    optimization has
+                    a long-lasting effect - your website will be in the top of the search results from six month to
+                    several years.
+
+                </p>
+                <p>
+                    We will do SEO - Optimization for your website and bring it all the way up to the top in search
+                    engines
+                    through all Internet or only in desired cities. We fill it with right, useful for visitors
+                    content,
+                    improve it's usability taking into account requirements of search algorithms.
+                    Website will will get new visitors by itself. </p>
+            </div>
+        </div>
+
+    </div>
+
+    <div class="block_1_row">
+        <div class="block_1_column_3">
+            <div class="block_1_text fadeInUp animated">
+                <p>
+                    SEO - it's a long term asset. It will take from couple of weeks up to three month of work to
+                    reach the top.
+                    You cannot quickly break through your competitors which have been there for years. And you can't
+                    rush search algorithms -
+                    Google updates website positions once a week. But the result worth it: your website will stay in
+                    the top of the search results
+                    for months or even years! We will optimize your website for new search algorithms in order to
+                    maintain top-positions.
+                </p>
+                <div class="list_1 fadeInUp animated">
+                    <h4 class="headerStyle">How We Do This:</h4>
+                    <ul>
+                        <li> Website audit</li>
+                        <li> Compose the semantic core</li>
+                        <li> Developing promotion strategy that best suites your type of business</li>
+                        <li> Write and publish SEO-texts</li>
+                        <li> Add site-reference and "reputation" to te website</li>
+                        <li> Perform internal/external website optimization</li>
+                        <li> Provide monthly report</li>
+
+                    </ul>
+                </div>
+            </div>
         </div>
     </div>
 
@@ -202,15 +257,20 @@
 
 
 <!--===============================================================================================-->
+<script src="../scripts/wow.min.js"></script>
+<!--===============================================================================================-->
+<script>new WOW().init();</script>
+<!--===============================================================================================-->
+<script src="../scripts/fadeBlock.js"></script>
+<!--===============================================================================================-->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <!--===============================================================================================-->
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"
         integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
 <!--===============================================================================================-->
-<script src="../scripts/portfolio.js"></script>
+<script src="../scripts/seo.js"></script>
 <!--===============================================================================================-->
 <script src="../scripts/scroll_up_button.js"></script>
-
 
 </body>
 
