--- a/our-services/web-design.html
+++ b/our-services/web-design.html
@@ -30,11 +30,13 @@
     <!--===============================================================================================-->
     <link rel="icon" type="image/png" href="../img/logo/favicon.png">
     <!--===============================================================================================-->
-    <link rel="stylesheet" href="../css/portfolio_style.css">
+    <link rel="stylesheet" href="../css/services_subpage_style.css">
     <!--===============================================================================================-->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+    <link rel="stylesheet" href="../css/fadeBlock.css">
     <!--===============================================================================================-->
-    <title>Portfolio</title>
+    <link rel="stylesheet" media="all" href="../css/animate.css">
+    <!--===============================================================================================-->
+    <title>Web Design</title>
 </head>
 
 <body>
@@ -44,6 +46,8 @@
     <!--Header-->
 
     <header class="header" id="myHeader">
+
+        <a href="#" id="scroll_top11" title="Наверх"></a>
 
         <!--Right-Sided Navigation-->
 
@@ -63,11 +67,11 @@
         </div>
 
         <ul class="content sidenav">
-            <li><a href='../index.html'>Home</a></li>
-            <li><a href="../About.html">About</a></li>
-            <li><a href="../Services.html">Services</a></li>
-            <li><a href="../Works.html">Works</a></li>
-            <li><a href='../ContactFrom_v6/Contacts.html' target="_blank">Contact</a></li>
+            <li><a href="../index.html">Home</a></li>
+            <li><a href="../about.html">About</a></li>
+            <li><a href="../services.html">Services</a></li>
+            <li><a href="../works.html">Works</a></li>
+            <li><a href="../contacts.html" target="_blank">Contact</a></li>
             <li class="phone_navbar">
                 <span class="phone_highlight"> +1-647</span>
                 <span>-676-3661 </span>
@@ -87,15 +91,15 @@
     <div class="breadcrumbs_container">
         <div class="breadcrumbs_row">
             <h4 class="breadcrumbs_title">
-                Portfolio </h4>
+                Web Design </h4>
             <ol class="breadcrumb">
                 <li class="first-item">
                     <a href='../index.html'>Home</a>
                 </li>
                 <li class="second-item">
-                    <a href='../Works.html'>Works</a>
+                    <a href='../services.html'>Our Services</a>
                 </li>
-                <li class="last-item">Enlight Agency</li>
+                <li class="last-item">Web Design</li>
             </ol>
         </div>
     </div>
@@ -103,19 +107,61 @@
 
     <!-- Block_1 -->
 
-    <div class="block_1">
-        <img class="imgResponsive animate__animated animate__fadeIn" src='../img/portfolio_8.jpg'
-             alt="Enlight Agency">
-        <div class="block_1_text animate__animated animate__fadeInUp">
-            <h5 align="center">Enlight Agency</h5> <br>
-            <p align="justify">Marketing agency, cutting-edge communications for tech startups,
-                well-established & VC companies.</p>
-            <p align="justify">Either you personal entrepreneur, venture startup, or your company needs new approach
-                to the
-                business. Agency builds brands, raise profiles, makes new businesses attractive to investors, and
-                helps them raise money.</p>
-            <p>Visit Website at : <a href='http://project958422.tilda.ws/' class="portfolioLink">Enlight</a></p> <br>
-            <p>Technologies Used: HTML5, CSS3, JavaScript, PHP, MySQL</p>
+    <div class="block_1_row">
+
+        <div class="block_1_column_2 fadeInUp animated">
+            <div class="block_1_image">
+                <img src='../img/img_313.jpg' width=100%/>
+            </div>
+        </div>
+
+        <div class="block_1_column_1 fadeInUp animated">
+            <div class="block_1_header">
+                <h4> It's Not Just Design - It's the Face of Your Company </h4>
+            </div>
+
+            <div class="block_1_text">
+                <p> Presence of the company in the Internet through website is an essential condition to attract new
+                    customers but... it's not enough. Positive result and gain of audience is usually achieved due
+                    to how beautiful and user friendly it is. iDigital Studio can help you with it! Our team of
+                    professional designers will create you unique design which will grab you customer's attention
+                    at the first look. We use latest design tools and techniques following
+                    your requirements until you are completely satisfied. </p>
+
+                <p> A comprehensive understanding of the functional, personal and business goals of your customers -
+                    creating a user experience that resolves them elegantly. </p>
+            </div>
+        </div>
+    </div>
+
+    <div class="block_1_row">
+        <div class="block_1_column_3">
+            <div class="block_1_text fadeInUp animated">
+                <p> Leaving your customers satisfied not
+                    only with the results they expected but even with some that they didn’t - is the key to
+                    developing winning products. We will help you research, prototype and design a product
+                    that will be valuable for its users and highly effective for your business to make sure
+                    you not only attract your customers but also pass on the message conveniently. </p>
+
+                <p> We operate effectively and successfully on any level of immersion to the business environment
+                    both at the executive level and at the level of discretionary management of the projects.
+                    We are always ready to offer optimal model of cooperation in every specific situation.
+                    We prepare text, graphic and multimedia content that makes the visitor stay on the website
+                    and which reveals unique features of the brand, it deepens the impression and intensifies the
+                    impact, convinces and sells. Also we write scripts and produce promotional videos.</p>
+
+                <div class="list_1 fadeInUp animated">
+                    <h4 class="headerStyle"> iDigital Use Modern Design and Technology for: </h4>
+                    <ul>
+                        <li> Interface Design</li>
+                        <li> Logo Design</li>
+                        <li> Banners</li>
+                        <li> Promotional Videos</li>
+                        <li> Infographics</li>
+                        <li> Individual solutions of any complexity</li>
+                    </ul>
+                </div>
+            </div>
         </div>
     </div>
 
@@ -205,15 +251,20 @@
 
 
 <!--===============================================================================================-->
+<script src="../scripts/wow.min.js"></script>
+<!--===============================================================================================-->
+<script>new WOW().init();</script>
+<!--===============================================================================================-->
+<script src="../scripts/fadeBlock.js"></script>
+<!--===============================================================================================-->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <!--===============================================================================================-->
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"
         integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
 <!--===============================================================================================-->
-<script src="../scripts/portfolio.js"></script>
+<script src="../scripts/web_design.js"></script>
 <!--===============================================================================================-->
 <script src="../scripts/scroll_up_button.js"></script>
-
 
 </body>
 
