--- a/our-services/web-development.html
+++ b/our-services/web-development.html
@@ -30,11 +30,13 @@
     <!--===============================================================================================-->
     <link rel="icon" type="image/png" href="../img/logo/favicon.png">
     <!--===============================================================================================-->
-    <link rel="stylesheet" href="../css/portfolio_style.css">
+    <link rel="stylesheet" href="../css/services_subpage_style.css">
     <!--===============================================================================================-->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+    <link rel="stylesheet" href="../css/fadeBlock.css">
     <!--===============================================================================================-->
-    <title>Portfolio</title>
+    <link rel="stylesheet" media="all" href="../css/animate.css">
+    <!--===============================================================================================-->
+    <title>Development</title>
 </head>
 
 <body>
@@ -63,11 +65,11 @@
         </div>
 
         <ul class="content sidenav">
-            <li><a href='../index.html'>Home</a></li>
-            <li><a href="../About.html">About</a></li>
-            <li><a href="../Services.html">Services</a></li>
-            <li><a href="../Works.html">Works</a></li>
-            <li><a href='../ContactFrom_v6/Contacts.html' target="_blank">Contact</a></li>
+            <li><a href="../index.html">Home</a></li>
+            <li><a href="../about.html">About</a></li>
+            <li><a href="../services.html">Services</a></li>
+            <li><a href="../works.html">Works</a></li>
+            <li><a href="../contacts.html" target="_blank">Contact</a></li>
             <li class="phone_navbar">
                 <span class="phone_highlight"> +1-647</span>
                 <span>-676-3661 </span>
@@ -87,15 +89,15 @@
     <div class="breadcrumbs_container">
         <div class="breadcrumbs_row">
             <h4 class="breadcrumbs_title">
-                Portfolio </h4>
+                Web Development </h4>
             <ol class="breadcrumb">
                 <li class="first-item">
                     <a href='../index.html'>Home</a>
                 </li>
                 <li class="second-item">
-                    <a href='../Works.html'>Works</a>
+                    <a href='../services.html'>Our Services</a>
                 </li>
-                <li class="last-item">FinMap</li>
+                <li class="last-item">Web Development</li>
             </ol>
         </div>
     </div>
@@ -103,22 +105,60 @@
 
     <!-- Block_1 -->
 
-    <div class="block_1">
-        <img class="imgResponsive animate__animated animate__fadeIn" src='../img/portfolio_6.jpg'>
-        <div class="block_1_text animate__animated animate__fadeInUp">
-            <h5 align="center">FinMap</h5> <br>
-            <p align="justify">Online service for comprehensible and convenient financial management. Service
-                provides all you need to manage a
-                small and a medium-sized business. All the owner needs to keep track of everything and to focus on
-                business development.</p>
-            <p align="justify">An online service based on the principle of the household
-                budget accounting: simple buttons, user-friendly interface and solution to owner's concerns.</p>
-            <p align="justify">All data is in one place: income, expenses, transactions, projects.
-                You are always aware of the current situation – no nasty surprises.</p>
-            <p align="justify">Proprietary algorithm for automated P&L and Cashflow reports, in-depth analytics and
-                debt control.</p>
-            <p>Visit Website at : <a href='https://finmap.online/en/' class="portfolioLink">FinMap</a></p> <br>
-            <p>Technologies Used: HTML5, CSS3, JavaScript, PHP, MySQL, Less, Sass</p>
+    <div class="block_1_row">
+
+        <div class="block_1_column_2  fadeInUp animated">
+            <div class="block_1_image">
+                <img src='../img/img_310.jpg' width=100%/>
+            </div>
+        </div>
+
+        <div class="block_1_column_1  fadeInUp animated">
+            <div class="block_1_header">
+                <h4> Make Website Your Digital Asset </h4>
+            </div>
+            <div class="block_1_text">
+                <p> You have a vision on how the ideal website should look like?
+                    Just share your thoughts with us and we'll make them real! </p>
+                <p> Website development – is an investment in your own business, in creating a valuable digital
+                    asset. Such asset increases capitalization of your business. It often becomes the main
+                    intangible asset
+                    of the company. We offer services different level of complexity regardless your business needs.
+                    Either you are personal entrepreneur or you operate big international corporation - we can
+                    always find a solution that suits your needs best. </p>
+                <p> From turnkey basis to renovation of already existing website we use latest web developing tools
+                    and technologies to make sure you will get fast, reliable, responsive website optimized
+                    for search engines. </p>
+            </div>
+        </div>
+
+    </div>
+
+    <div class="block_1_row">
+        <div class="block_1_column_3">
+            <div class="block_1_text fadeInUp animated">
+                <p>Your customers want to find and do business with your organization completely online,
+                    so bringing your business online isn’t a choice — it’s a necessity. The more value you are able
+                    to provide through digital channels, the higher chances that you will remain relevant to your
+                    customers. We help businesses invent and develop new digital products as well as streamline
+                    existing customer-facing online services, by researching the market, developing delightful
+                    and valuable user experiences, and engineering highly efficient web-and-mobile-native systems.
+                    We make sure you outstand from competitors with unique design and user-friendly interface. </p>
+
+                <div class="list_1 fadeInUp animated">
+                    <h4 class="headerStyle"> Our Websites - It's Always Complex Approach </h4>
+                    <ul>
+                        <li> Landing pages</li>
+                        <li> Business card websites</li>
+                        <li> Portfolios</li>
+                        <li> Magazine websites</li>
+                        <li> eCommerce websites</li>
+                        <li> Educational websites</li>
+                        <li> Blogs</li>
+                        <li> Individual solutions of any complexity</li>
+                    </ul>
+                </div>
+            </div>
         </div>
     </div>
 
@@ -208,15 +248,21 @@
 
 
 <!--===============================================================================================-->
+<script src="../scripts/wow.min.js"></script>
+<!--===============================================================================================-->
+<script>new WOW().init();</script>
+<!--===============================================================================================-->
+<script src="../scripts/fadeBlock.js"></script>
+<!--===============================================================================================-->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <!--===============================================================================================-->
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"
         integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+
 <!--===============================================================================================-->
-<script src="../scripts/portfolio.js"></script>
+<script src="../scripts/development.js"></script>
 <!--===============================================================================================-->
 <script src="../scripts/scroll_up_button.js"></script>
-
 
 </body>
 
