--- a/portfolio/bookstore.html
+++ b/portfolio/bookstore.html
@@ -30,13 +30,11 @@
     <!--===============================================================================================-->
     <link rel="icon" type="image/png" href="../img/logo/favicon.png">
     <!--===============================================================================================-->
-    <link rel="stylesheet" href="../css/services_subpage_style.css">
+    <link rel="stylesheet" href="../css/portfolio_style.css">
     <!--===============================================================================================-->
-    <link rel="stylesheet" href="../css/fadeBlock.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <!--===============================================================================================-->
-    <link rel="stylesheet" media="all" href="../css/animate.css">
-    <!--===============================================================================================-->
-    <title>Branding</title>
+    <title>Portfolio</title>
 </head>
 
 <body>
@@ -65,11 +63,11 @@
         </div>
 
         <ul class="content sidenav">
-            <li><a href='../index.html'>Home</a></li>
-            <li><a href="../About.html">About</a></li>
-            <li><a href="../Services.html">Services</a></li>
-            <li><a href="../Works.html">Works</a></li>
-            <li><a href='../ContactFrom_v6/Contacts.html' target="_blank">Contact</a></li>
+            <li><a href="../index.html">Home</a></li>
+            <li><a href="../about.html">About</a></li>
+            <li><a href="../services.html">Services</a></li>
+            <li><a href="../works.html">Works</a></li>
+            <li><a href="../contacts.html" target="_blank">Contact</a></li>
             <li class="phone_navbar">
                 <span class="phone_highlight"> +1-647</span>
                 <span>-676-3661 </span>
@@ -89,15 +87,15 @@
     <div class="breadcrumbs_container">
         <div class="breadcrumbs_row">
             <h4 class="breadcrumbs_title">
-                Branding </h4>
+                Portfolio </h4>
             <ol class="breadcrumb">
                 <li class="first-item">
                     <a href='../index.html'>Home</a>
                 </li>
                 <li class="second-item">
-                    <a href='../Services.html'>Our Services</a>
+                    <a href='../works.html'>Works</a>
                 </li>
-                <li class="last-item">Branding</li>
+                <li class="last-item">Bookstore</li>
             </ol>
         </div>
     </div>
@@ -105,59 +103,21 @@
 
     <!-- Block_1 -->
 
-    <div class="block_1_row">
-
-        <div class="block_1_column_2 fadeInUp animated">
-            <div class="block_1_image">
-                <img src='../img/img_314.jpg' width=100%/>
-            </div>
-        </div>
-
-        <div class="block_1_column_1 fadeInUp animated">
-            <div class="block_1_header">
-                <h4> Need a Fresh Way to Grab Attention of Your Customers or Find New Ones? </h4>
-            </div>
-            <div class="block_1_text">
-                <p> Branding is fundamental for every company, no matter what this field might be.
-                    It could be products or services. Branding is equally important and it needs to run smoothly, at
-                    all costs.
-                    Right branding strategy can not only grow your company’s profits, but also help your business
-                    evolve and even grow into new markets. </p>
-
-                <p> Using latest methods of design thinking, together with the client, we form an integral brand
-                    platform that allows the company to reach a new level of development, clearly aware of its
-                    competitive advantages and values.
-                    <a class="textHighlight" href='../ContactFrom_v6/Contacts.html' target="_blank">Contact Us Today to Learn More</a>
-            </div>
-        </div>
-    </div>
-
-    <div class="block_1_row">
-        <div class="block_1_column_3">
-            <div class="block_1_text fadeInUp animated">
-
-                <p> It is important to understand the concept of a brand in order to understand what branding
-                    exactly is. A brand is the "image" or reputation of the product or service that customer
-                    familiar
-                    with by identifying the logo, slogan, design, or name of the company. Branding is the
-                    process to market that "image" of a product or service so that it can be easily
-                    recognized in a competitive market. The process is about creating a
-                    unique image for a product in consumer’s mind. By creating a brand, you market a
-                    promise that explains what your customers should expect from your products and services. </p>
-
-                <div class="list_1 fadeInUp animated">
-                    <h4 class="headerStyle"> We Provide Full Range of Branding Services: </h4>
-                    <ul>
-                        <li> Logo design</li>
-                        <li> Brand messaging</li>
-                        <li> Brand positioning</li>
-                        <li> Brand voice</li>
-                        <li> Style guide</li>
-                        <li> Social media branding</li>
-                        <li> Promotional marketing materials</li>
-                    </ul>
-                </div>
-            </div>
+    <div class="block_1">
+        <img class="imgResponsive animate__animated animate__fadeIn" src='../img/portfolio_7.jpg' alt="Bookstore">
+        <div class="block_1_text animate__animated animate__fadeInUp">
+            <h5 align="center">Adventures of Noah</h5> <br>
+            <p align="justify">Online Book Store with integrated most popular payment systems and intuitive CRM
+                system.</p>
+            <p align="justify">“Adventures of Noah” is a Children’s Picture Book, that can be enjoyed by all. An
+                adorable
+                true story about a puppy named Noah, and life as he knows it, then one incredible thing happens to
+                him.</p>
+            <p align="justify">Books are available on the website in both paper and e-book formats.</p>
+            <!-- <br></br> -->
+            <p>Visit Website at : <a href='https://hexagon-pentagon-nj3f.squarespace.com/'
+                                     class="portfolioLink">Bookstore</a></p> <br>
+            <p>Technologies Used: HTML5, CSS3, JavaScript, PHP, MySQL</p>
         </div>
     </div>
 
@@ -247,20 +207,15 @@
 
 
 <!--===============================================================================================-->
-<script src="../scripts/wow.min.js"></script>
-<!--===============================================================================================-->
-<script>new WOW().init();</script>
-<!--===============================================================================================-->
-<script src="../scripts/fadeBlock.js"></script>
-<!--===============================================================================================-->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <!--===============================================================================================-->
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"
         integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
 <!--===============================================================================================-->
-<script src="../scripts/branding.js"></script>
+<script src="../scripts/portfolio.js"></script>
 <!--===============================================================================================-->
 <script src="../scripts/scroll_up_button.js"></script>
+
 
 </body>
 
