Website - revised February 16-2021

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                 <h4>Who We Are</h4>
             </div>
             <div class="block2Text1">
-                <p class="block2Text1"> We are creative Web Developing Company, located in Toronto, that turns your
+                <p class="block2Text1"> We are creative Web Development Company, located in Toronto, that turns your
                     ideas into a new driving force
                     of your business. Our mission is to help your business grow and evolve.</p>
             </div>
@@ -191,8 +191,9 @@
             <div class="block2Text3">
                 <a href='contacts.html' target="_blank">Contact Us Now to Learn More</a>
             </div>
-            <div class="block2Text4">
-                <p>+1-647-676-3661
+            <div>
+                <p class="block2Text4"> <a href="tel:+16476763661">+1-647-676-3661</a></p>
+                <!--                <p>+1-647-676-3661-->
                 <p><span class="block2Text5"> or email </span>
                     <a class="block2Text6" href="mailto:sales@idigitalstudio.ca">sales@idigitalstudio.ca</a>
             </div>
@@ -308,16 +309,16 @@
             </div>
         </div>
 
-        <div class="block4Column">
-            <div class="contentWrapper wow zoomIn">
-                <div class="block4Picture">
-                    <a href="portfolio/lost_shirt.html"><img src='img/portfolio_2.jpg' alt="Lost Shirt"
-                                                             style="width:100%"></a>
-                </div>
-                <h5 class="block4Logo">Lost Shirt</h5>
-                <p class="block4ColumnSecText">Online Store with implemented CRM and payment systems</p>
-            </div>
-        </div>
+<!--        <div class="block4Column">-->
+<!--            <div class="contentWrapper wow zoomIn">-->
+<!--                <div class="block4Picture">-->
+<!--                    <a href="portfolio/lost_shirt.html"><img src='img/portfolio_2.jpg' alt="Lost Shirt"-->
+<!--                                                             style="width:100%"></a>-->
+<!--                </div>-->
+<!--                <h5 class="block4Logo">Lost Shirt</h5>-->
+<!--                <p class="block4ColumnSecText">Online Store with implemented CRM and payment systems</p>-->
+<!--            </div>-->
+<!--        </div>-->
 
         <div class="block4Column">
             <div class="contentWrapper wow zoomIn">
@@ -363,16 +364,16 @@
             </div>
         </div>
 
-        <div class="block4Column">
-            <div class="contentWrapper wow zoomIn">
-                <div class="block4Picture">
-                    <a href="portfolio/bookstore.html"><img src='img/portfolio_7.jpg' alt="Adventures Of Noah"
-                                                            style="width:100%"></a>
-                </div>
-                <h5 class="block4Logo">Adventures Of Noah</h5>
-                <p class="block4ColumnSecText">Online Book Store with implemented CRM and payment systems</p>
-            </div>
-        </div>
+<!--        <div class="block4Column">-->
+<!--            <div class="contentWrapper wow zoomIn">-->
+<!--                <div class="block4Picture">-->
+<!--                    <a href="portfolio/bookstore.html"><img src='img/portfolio_7.jpg' alt="Adventures Of Noah"-->
+<!--                                                            style="width:100%"></a>-->
+<!--                </div>-->
+<!--                <h5 class="block4Logo">Adventures Of Noah</h5>-->
+<!--                <p class="block4ColumnSecText">Online Book Store with implemented CRM and payment systems</p>-->
+<!--            </div>-->
+<!--        </div>-->
 
         <div class="block4Column">
             <div class="contentWrapper wow zoomIn">
@@ -484,16 +485,16 @@
                 </div>
                 <div class="footerColumn">
                     <div class="footer_icon_wrap">
-                        <img src='img/icons/dark_icon_2.png'>
+                        <a href="mailto:sales@idigitalstudio.ca"><img src='img/icons/dark_icon_2.png'>
                     </div>
                     <a class="email-text"
                        href="mailto:sales@idigitalstudio.ca">sales@idigitalstudio.ca</a>
                 </div>
                 <div class="footerColumn">
                     <div class="footer_icon_wrap">
-                        <img src='img/icons/dark_icon_3.png'>
+                        <a href="tel:+16476763661"> <img src='img/icons/dark_icon_3.png'>
                     </div>
-                    <p class="phoneFoot"> Phone: +1-647-676-3661 </p>
+                    <p class="phoneFoot"> <a href="tel:+16476763661">Phone: +1-647-676-3661</a></p>
                 </div>
 
             </div>
