--- a/works.html
+++ b/works.html
@@ -107,6 +107,11 @@
             <button class="btn" onclick="filterSelection('branding')"> Marketing/eCommerce</button>
         </div>
 
+        <div class="PortfolioHeader">
+            <h5> iDigital Studio Portfolio <h5>
+                <p>Latest technology, attention to detail, creative approach - that's our way to creating high-quality websites</p>
+        </div>
+
         <!-- portfolio Gallery Grid -->
         <div class="block_1_row">
             <div class="column design">
@@ -117,22 +122,22 @@
                     <p>Communication agency for tech & digital startups and Venture Capital companies</p>
                 </div>
             </div>
-            <div class="column design">
-                <div class="content">
-                    <a href="portfolio/lost_shirt.html"><img mg src='img/portfolio_2.jpg' class="overlay"
-                                                             alt="Loft School" style="width:100%"></a>
-                    <div><a href="portfolio/lost_shirt.html">Lost Shirt</a></div>
-                    <p>Online Store with creative bright design, selling t-shirts with funny prints (all sizes)</p>
-                </div>
-            </div>
-            <div class="column design">
-                <div class="content">
-                    <a href="portfolio/instatech.html"><img mg src='img/portfolio_9.jpg' class="overlay"
-                                                            alt="Instatech" style="width:100%"></a>
-                    <div><a href="portfolio/instatech.html">Instatech</a></div>
-                    <p>Consulting services and solutions in AI • BLOCKCHAIN • CRYPTO • IOT • VR • AR • MOBILE</p>
-                </div>
-            </div>
+<!--            <div class="column design">-->
+<!--                <div class="content">-->
+<!--                    <a href="portfolio/lost_shirt.html"><img mg src='img/portfolio_2.jpg' class="overlay"-->
+<!--                                                             alt="Loft School" style="width:100%"></a>-->
+<!--                    <div><a href="portfolio/lost_shirt.html">Lost Shirt</a></div>-->
+<!--                    <p>Online Store with creative bright design, selling t-shirts with funny prints (all sizes)</p>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--            <div class="column design">-->
+<!--                <div class="content">-->
+<!--                    <a href="portfolio/instatech.html"><img mg src='img/portfolio_9.jpg' class="overlay"-->
+<!--                                                            alt="Instatech" style="width:100%"></a>-->
+<!--                    <div><a href="portfolio/instatech.html">Instatech</a></div>-->
+<!--                    <p>Consulting services and solutions in AI • BLOCKCHAIN • CRYPTO • IOT • VR • AR • MOBILE</p>-->
+<!--                </div>-->
+<!--            </div>-->
 
             <div class="column branding">
                 <div class="content">
@@ -159,14 +164,15 @@
                 </div>
             </div>
 
-            <div class="column advertisement">
-                <div class="content">
-                    <a href="portfolio/bookstore.html"><img mg src='img/portfolio_7.jpg' alt="Adventures Of Noah"
-                                                            class="overlay" style="width:100%"></a>
-                    <div><a href="portfolio/bookstore.html">Adventures Of Noah</a></div>
-                    <p>Online Book Store with integrated most popular payment systems and intuitive CRM system</p>
-                </div>
-            </div>
+<!--            <div class="column advertisement">-->
+<!--                <div class="content">-->
+<!--                    <a href="portfolio/bookstore.html"><img mg src='img/portfolio_7.jpg' alt="Adventures Of Noah"-->
+<!--                                                            class="overlay" style="width:100%"></a>-->
+<!--                    <div><a href="portfolio/bookstore.html">Adventures Of Noah</a></div>-->
+<!--                    <p>Online Book Store with integrated most popular payment systems and intuitive CRM system</p>-->
+<!--                </div>-->
+<!--            </div>-->
+
             <div class="column advertisement">
                 <div class="content">
                     <a href="portfolio/enlight.html"><img mg src='img/portfolio_8.jpg' alt="Enlight Agency"
@@ -210,16 +216,16 @@
                 </div>
                 <div class="footerColumn">
                     <div class="footer_icon_wrap">
-                        <img src='img/icons/dark_icon_2.png'>
+                        <a href="mailto:sales@idigitalstudio.ca"><img src='img/icons/dark_icon_2.png'>
                     </div>
                     <a class="email-text"
                        href="mailto:sales@idigitalstudio.ca">sales@idigitalstudio.ca</a>
                 </div>
                 <div class="footerColumn">
                     <div class="footer_icon_wrap">
-                        <img src='img/icons/dark_icon_3.png'>
+                        <a href="tel:+16476763661"> <img src='img/icons/dark_icon_3.png'>
                     </div>
-                    <p class="phoneFoot"> Phone: +1-647-676-3661 </p>
+                    <p class="phoneFoot"> <a href="tel:+16476763661">Phone: +1-647-676-3661</a></p>
                 </div>
 
             </div>
