--- a/portfolio/bookstore.html
+++ b/portfolio/bookstore.html
@@ -113,8 +113,7 @@
                 adorable
                 true story about a puppy named Noah, and life as he knows it, then one incredible thing happens to
                 him.</p>
-            <p align="justify">Books are available on the website in both paper and e-book formats.</p>
-            <!-- <br></br> -->
+            <p align="justify">Books are available on the website in both paper and e-book formats.</p> <br>
             <p>Visit Website at : <a href='https://hexagon-pentagon-nj3f.squarespace.com/'
                                      class="portfolioLink">Bookstore</a></p> <br>
             <p>Technologies Used: HTML5, CSS3, JavaScript, PHP, MySQL</p>
@@ -189,16 +188,16 @@
                 </div>
                 <div class="footerColumn">
                     <div class="footer_icon_wrap">
-                        <img src='../img/icons/dark_icon_2.png'>
+                        <a href="mailto:sales@idigitalstudio.ca"><img src='../img/icons/dark_icon_2.png'>
                     </div>
                     <a class="email-text"
                        href="mailto:sales@idigitalstudio.ca">sales@idigitalstudio.ca</a>
                 </div>
                 <div class="footerColumn">
                     <div class="footer_icon_wrap">
-                        <img src='../img/icons/dark_icon_3.png'>
+                        <a href="tel:+16476763661"> <img src='../img/icons/dark_icon_3.png'>
                     </div>
-                    <p class="phoneFoot"> Phone: +1-647-676-3661 </p>
+                    <p class="phoneFoot"> <a href="tel:+16476763661">Phone: +1-647-676-3661</a></p>
                 </div>
 
             </div>
