--- a/portfolio/finmap.html
+++ b/portfolio/finmap.html
@@ -117,7 +117,7 @@
                 You are always aware of the current situation – no nasty surprises.</p>
             <p align="justify">Proprietary algorithm for automated P&L and Cashflow reports, in-depth analytics and
                 debt control.</p>
-            <p>Visit Website at : <a href='https://finmap.online/en/finmap.html' class="portfolioLink">FinMap</a></p> <br>
+            <p>Visit Website at : <a href='https://finmap.online/' class="portfolioLink">FinMap</a></p> <br>
             <p>Technologies Used: HTML5, CSS3, JavaScript, PHP, MySQL, Less, Sass</p>
         </div>
     </div>
@@ -190,16 +190,16 @@
                 </div>
                 <div class="footerColumn">
                     <div class="footer_icon_wrap">
-                        <img src='../img/icons/dark_icon_2.png'>
+                        <a href="mailto:sales@idigitalstudio.ca"><img src='../img/icons/dark_icon_2.png'>
                     </div>
                     <a class="email-text"
                        href="mailto:sales@idigitalstudio.ca">sales@idigitalstudio.ca</a>
                 </div>
                 <div class="footerColumn">
                     <div class="footer_icon_wrap">
-                        <img src='../img/icons/dark_icon_3.png'>
+                        <a href="tel:+16476763661"> <img src='../img/icons/dark_icon_3.png'>
                     </div>
-                    <p class="phoneFoot"> Phone: +1-647-676-3661 </p>
+                    <p class="phoneFoot"> <a href="tel:+16476763661">Phone: +1-647-676-3661</a></p>
                 </div>
 
             </div>
