--- a/portfolio/pullr.html
+++ b/portfolio/pullr.html
@@ -115,7 +115,7 @@
             <p align="justify">PULLR provides a comprehensive range of communications services, including integrated
                 marketing and strategic PR campaigns, to build strong brands for the VC firms, help them engage the
                 global audience, and become successful.</p>
-            <p>Visit Website at : <a href='https://savazh.github.io/pullr/pullr.html' class="portfolioLink">PULLR</a></p> <br>
+            <p>Visit Website at : <a href='https://savazh.github.io/pullr/' class="portfolioLink">PULLR</a></p> <br>
             <p>Technologies Used: HTML5, CSS3, JavaScript, PHP, MySQL, Less, Sass</p>
         </div>
     </div>
@@ -188,16 +188,16 @@
                 </div>
                 <div class="footerColumn">
                     <div class="footer_icon_wrap">
-                        <img src='../img/icons/dark_icon_2.png'>
+                        <a href="mailto:sales@idigitalstudio.ca"><img src='../img/icons/dark_icon_2.png'>
                     </div>
                     <a class="email-text"
                        href="mailto:sales@idigitalstudio.ca">sales@idigitalstudio.ca</a>
                 </div>
                 <div class="footerColumn">
                     <div class="footer_icon_wrap">
-                        <img src='../img/icons/dark_icon_3.png'>
+                        <a href="tel:+16476763661"> <img src='../img/icons/dark_icon_3.png'>
                     </div>
-                    <p class="phoneFoot"> Phone: +1-647-676-3661 </p>
+                    <p class="phoneFoot"> <a href="tel:+16476763661">Phone: +1-647-676-3661</a></p>
                 </div>
 
             </div>
