Contact forms - active:) - february-19-2021

--- a/contacts.html
+++ b/contacts.html
@@ -44,7 +44,7 @@
             <i class="fa fa-close" aria-hidden="true"></i>
         </button>
 
-        <form class="contact100-form validate-form" >
+        <form action="contacts.php" method="post" class="contact100-form validate-form" >
 				<span class="contact100-form-title">
 					Contact Us
 				</span>
@@ -79,7 +79,7 @@
         </form>
 
         <span class="contact100-more">
-				For any question please Contact Us: <span class="contact100-more-highlight">+1-647-676-3661</span>
+				For any question please Contact Us: <span class="contact100-more-highlight"><a href="tel:+16476763661">+1-647-676-3661</a></span>
 			</span>
     </div>
 </div>
