--- a/index.html
+++ b/index.html
@@ -393,20 +393,20 @@
 
     <div class="container-contact100 wow fadeInUp">
         <div class="wrap-contact100">
-            <form action="contact.php" method="post" class="contact100-form validate-form">
+            <form action="index.php" method="post" class="contact100-form validate-form">
                 <span class="contact100-form-title">
                     Say Hello!
                 </span>
 
                 <div class="wrap-input100 validate-input" data-validate="Name is required">
                     <span class="label-input100">Your Name</span>
-                    <input class="input100" type="text" name="cf_name" placeholder="Enter your name">
+                    <input class="input100" type="text" name="name" placeholder="Enter your name">
                     <span class="focus-input100"></span>
                 </div>
 
                 <div class="wrap-input100 validate-input" data-validate="Valid email is required: ex@abc.xyz">
                     <span class="label-input100">Email</span>
-                    <input class="input100" type="text" name="cf_email" placeholder="Enter your email address">
+                    <input class="input100" type="text" name="email" placeholder="Enter your email address">
                     <span class="focus-input100"></span>
                 </div>
 
@@ -445,7 +445,7 @@
 
                 <div class="wrap-input100 validate-input" data-validate="Message is required">
                     <span class="label-input100">Message</span>
-                    <textarea class="input100" name="cf_message" placeholder="Your message here..."></textarea>
+                    <textarea class="input100" name="message" placeholder="Your message here..."></textarea>
                     <span class="focus-input100"></span>
                 </div>
 
